--- a/H1EmuLauncher/Language/StringResources.bg-BG.xaml
+++ b/H1EmuLauncher/Language/StringResources.bg-BG.xaml
@@ -5,22 +5,16 @@
     <system:String x:Key="item1">Ново обновление е налично,желаете ли да го изтеглите?</system:String>
     <system:String x:Key="item2">Обновление</system:String>
     <system:String x:Key="item3">Версията</system:String>
-    <system:String x:Key="item4">Натисни пусни за пуснеш локалният солов сървър.</system:String>
-    <system:String x:Key="item5">Натисти играй за да се свържеш с локалният сървър.</system:String>
-    <system:String x:Key="item6">Натисни свържи се за да се свържеш към тестови сървър на H1emu. (2015год. само)</system:String>
-    <system:String x:Key="item7">Пусни</system:String>
+    <system:String x:Key="item4">Моля Изчакай</system:String>
     <system:String x:Key="item8">Играй</system:String>
-    <system:String x:Key="item9">Свържи се</system:String>
     <system:String x:Key="item10">Внимание:</system:String>
-    <system:String x:Key="item11">Трябва да притежавате H1Z1: Just Survive на вашият  Steam  акаунт за да изтеглите. This project does not support piracy.</system:String>
+    <system:String x:Key="item11">рябва да притежавате H1Z1: Just Survive във вашия акаунт в Steam, за да го изтеглите. Този проект не поддържа пиратство.</system:String>
     <system:String x:Key="item12">Присъеденете се в общноста на</system:String>
     <system:String x:Key="item13">Грешка при стартирането на играта:</system:String>
     <system:String x:Key="item14">Играта не е открита в избраната категория.</system:String>
-    <system:String x:Key="item15">Няма тестови сървър за тази версия на играта. (December 2016)</system:String>
-    <system:String x:Key="item16">в избраната директория не се съдържат файлове за пача.\n\nИскате ли да продължите въпреки това? (Няма да можете да влезете във сървъри)</system:String>
+    <system:String x:Key="item15">Трябва да притежавате H1Z1: Just Survive във вашия Steam акаунт, за да изтеглите.</system:String>
     <system:String x:Key="item17">Влизането в Steam профила е неуспешно :</system:String>
     <system:String x:Key="item18">Добави</system:String>
-    <system:String x:Key="item19">• Статус •</system:String>
     <system:String x:Key="item21">Получих ключ за депо за {0} резултат: {1}</system:String>
     <system:String x:Key="item23">Инсталирането е готово!</system:String>
     <system:String x:Key="item24">Трябва да инсталирате друга версия.? Натиснете бутона отдолу за да изтеглете отново!</system:String>
@@ -28,8 +22,6 @@
     <system:String x:Key="item26">Момента се изтегля:</system:String>
     <system:String x:Key="item27">версия</system:String>
     <system:String x:Key="item28">Отмяна</system:String>
-    <system:String x:Key="item29">Коя версия на</system:String>
-    <system:String x:Key="item30">Искате ли да инсталирате?</system:String>
     <system:String x:Key="item31">Януари 2015</system:String>
     <system:String x:Key="item32">Декември 2016</system:String>
     <system:String x:Key="item33">Сигурни ли сте ,че искате отмените инсталирането H1Z1: Just Survive </system:String>
@@ -48,9 +40,7 @@
     <system:String x:Key="item46">Натиснете тук за да инсталирате последвата версия на сървъра.</system:String>
     <system:String x:Key="item47">Натиснете тук за да инсталирате последната стабилна версия на сървъра.</system:String>
     <system:String x:Key="item48">Проверка за актуализации...</system:String>
-    <system:String x:Key="item49">Моля изчакайте</system:String>
     <system:String x:Key="item50">Моля  уверете се ,че вашият имейл е отворен за 2 факторната защита след като влезете във вашият акаунт.</system:String>
-    <system:String x:Key="item51">Вие нямате сложена директория.\n\nSet this in the Settings menu.</system:String>
     <system:String x:Key="item52">Вие нямате сървърните файлове инсталиране.\n\nИнстарирайте ги в Настройки.</system:String>
     <system:String x:Key="item53">Имаше грешка при пускането на сървъра.:</system:String>
     <system:String x:Key="item54">Изтегляне...</system:String>
@@ -63,7 +53,6 @@
     <system:String x:Key="item61">Вижте пълни подробности за обновлението...</system:String>
     <system:String x:Key="item62">Настройки...</system:String>
     <system:String x:Key="item63">Специално благодарим на всеки ,които се присъедини към обществото и държа надеждата жива!</system:String>
-    <system:String x:Key="item64">Присаединете се към общноста</system:String>
     <system:String x:Key="item65">За проекта...</system:String>
     <system:String x:Key="item66">Не може да се извлече информация от GitHub:</system:String>
     <system:String x:Key="item67">Не сега</system:String>
@@ -79,26 +68,17 @@
     <system:String x:Key="item77">Потвърджаващ код код:</system:String>
     <system:String x:Key="item78">Моля, въведете двуфакторния код за удостоверяване, изпратен до вашето приложение Steam.</system:String>
     <system:String x:Key="item79">Моля, въведете двуфакторния код за удостоверяване, изпратен на вашия имейл.</system:String>
-    <system:String x:Key="item80">Saved config before loading</system:String>
-    <system:String x:Key="item81">Моля напишете вашият 2 факторен потвърджаващ код.</system:String>
-    <system:String x:Key="item83">Неуспешно извличане на CDN токен за сървър {0} депо {1}</system:String>
     <system:String x:Key="item84">Не можах да намеря депа за изтегляне за приложението {0}</system:String>
     <system:String x:Key="item85">Депо {0} не е в списъка за приложение {1}</system:String>
-    <system:String x:Key="item86">Манифест {0} ({1})...</system:String>
-    <system:String x:Key="item87">Да</system:String>
-    <system:String x:Key="item88">Не</system:String>
     <system:String x:Key="item89">Избраната директория  не е празна.\n\nИзкате ли да продължите въпреки това?</system:String>
     <system:String x:Key="item91">Обработка...</system:String>
     <system:String x:Key="item92">OK</system:String>
-    <system:String x:Key="item93">Задачата е неуспешна</system:String>
     <system:String x:Key="item95">Имаше грешка с инсталиране на версия 2015год:</system:String>
     <system:String x:Key="item97">Имаше грешка с инсталиране на версия 2016год:</system:String>
-    <system:String x:Key="item98">Инсталиране на файлове за версия 2015год...</system:String>
     <system:String x:Key="item99">Разархивиране на файлове за пача...</system:String>
     <system:String x:Key="item100">Изтриване на  .zip файл...</system:String>
     <system:String x:Key="item101">Готово. (Elapsed time:</system:String>
     <system:String x:Key="item102">Файловете за версия 2015 са изтеглени.</system:String>
-    <system:String x:Key="item103">Изтегляне за файлове за 2016год...</system:String>
     <system:String x:Key="item104">Файлове за версия 2016год. са инсталирани.</system:String>
     <system:String x:Key="item105">Инстариране на последната версия на сървъра...</system:String>
     <system:String x:Key="item107">There was an error installing the latest server:</system:String>
@@ -108,9 +88,7 @@
     <system:String x:Key="item112">Стабилната версия на сървъра е инсталирана.</system:String>
     <system:String x:Key="item113">Проверяване за стари файлове...</system:String>
     <system:String x:Key="item114">Изтриване на стари файлове...</system:String>
-    <system:String x:Key="item115">Изтегляне на сърварната информацияDownloading server files...</system:String>
     <system:String x:Key="item116">Разархивиране на сърварната информация...</system:String>
-    <system:String x:Key="item117">Изтегляне на  NodeJS ...</system:String>
     <system:String x:Key="item118">Разархивиране node files...</system:String>
     <system:String x:Key="item120">Моля затворете H1Z1.</system:String>
     <system:String x:Key="item121">H1Z1.exe се използва.\n\nЗатворете всички отворени прозорци на H1Z1.</system:String>
@@ -139,7 +117,6 @@
     <system:String x:Key="item145">IP адрес на сървара...</system:String>
     <system:String x:Key="item146">Не можете да изтрете този вход.</system:String>
     <system:String x:Key="item147">Сигурни ли сте , че искате да изтриете този сървър?</system:String>
-    <system:String x:Key="item148">Инсталиране на файлове за версия 2015год...</system:String>
     <system:String x:Key="item149">Разархивиране на файлове...</system:String>
     <system:String x:Key="item150">Поправяне</system:String>
     <system:String x:Key="item151">Името на сървара или IP адреса не са верни.</system:String>
@@ -167,11 +144,12 @@
     <system:String x:Key="item173">Подайте сигнал за грешка...</system:String>
     <system:String x:Key="item174">Тук можете да докладвате за всички грешки, които сте изпитали в играта, докато използвате файловете на сървъра H1Emu:</system:String>
     <system:String x:Key="item175">Тук можете да докладвате за всички грешки, които сте изпитали, докато използвате H1Emu Launcher:</system:String>
-    <system:String x:Key="item176">изтрий данните си за един играч...</system:String>
+    <system:String x:Key="item176">изтриване на вашите данни за един играч.</system:String>
     <system:String x:Key="item177">Няма намерени данни за един играч.</system:String>
     <system:String x:Key="item178">Изтриването на вашите данни за един играч може да реши всички проблеми, пред които сте изправени, предупреждаваме ви, че ще загубите целия напредък.\n\nИскате ли да продължите?</system:String>
     <system:String x:Key="item179">Успешно изтрити данни за един играч.</system:String>
-    <system:String x:Key="item180">Ключът на акаунта, който използвате, е забранен.</system:String>
-    <system:String x:Key="item181">Ключът на акаунта, който използвате, не е валиден в базата данни на H1Emu.\n\nМоля, проверете дали сте въвели правилно ключа.</system:String>
-    <system:String x:Key="item182">Възникна грешка при валидирането на ключа на вашия акаунт:</system:String>
+    <system:String x:Key="item180">Ключът на акаунта, който използвате, не е валиден в базата данни на H1Emu.\n\nМоля, проверете дали сте въвели правилно ключа.</system:String>
+    <system:String x:Key="item181">Ключът на акаунта, който използвате, е забранен.</system:String>
+    <system:String x:Key="item182">Неизвестен код за отговор при проверка на валидността на ключа на вашия акаунт:</system:String>
+    <system:String x:Key="item183">Възникна грешка при валидирането на ключа на вашия акаунт:</system:String>
 </ResourceDictionary>
