--- a/H1EmuLauncher/Language/StringResources.de-DE.xaml
+++ b/H1EmuLauncher/Language/StringResources.de-DE.xaml
@@ -5,22 +5,16 @@
     <system:String x:Key="item1">Eine neue Aktualisierung ist verfügbar, möchtest du die Aktualisierung jetzt ausführen?</system:String>
     <system:String x:Key="item2">Aktualisierung</system:String>
     <system:String x:Key="item3">Aktualisieren</system:String>
-    <system:String x:Key="item4">Klicken Sie hier auf Start, um den lokalen Solo Server zu starten.</system:String>
-    <system:String x:Key="item5">Klicken Sie hier auf Start, um eine Verbindung zu einem lokalen Server herzustellen.</system:String>
-    <system:String x:Key="item6">Klicke auf Verbinden, um eine Verbindung mit dem H1Emu Test Server herzustellen. (nur 2015)</system:String>
-    <system:String x:Key="item7">Start</system:String>
+    <system:String x:Key="item4">Warten Sie mal</system:String>
     <system:String x:Key="item8">SPIELEN</system:String>
-    <system:String x:Key="item9">VERBINDEN</system:String>
     <system:String x:Key="item10">WARNUNG:</system:String>
     <system:String x:Key="item11">Sie müssen H1Z1: Just Survive auf Ihrem Steam Konto besitzen, um es herunterladen zu können. Dieses Projekt unterstützt keine Piraterie.</system:String>
     <system:String x:Key="item12">Trete der Community bei</system:String>
     <system:String x:Key="item13">Fehler beim Starten des Spiels:</system:String>
     <system:String x:Key="item14">Spiel im angegebenen Verzeichnis nicht gefunden.</system:String>
-    <system:String x:Key="item15">Es gibt derzeit keinen Testserver für diese Version des Spiels. (Dezember 2016)</system:String>
-    <system:String x:Key="item16">Das ausgewählte Verzeichnis enthält keine Patch Dateien.\n\n Möchten Sie trotzdem fortfahren? (Sie können nicht in Server laden)</system:String>
+    <system:String x:Key="item15">Sie müssen H1Z1: Just Survive auf Ihrem Steam-Konto besitzen, um es herunterladen zu können.</system:String>
     <system:String x:Key="item17">Anmeldung bei Steam nicht möglich:</system:String>
     <system:String x:Key="item18">HINZUFÜGEN</system:String>
-    <system:String x:Key="item19">• Status •</system:String>
     <system:String x:Key="item21">Depotschlüssel für {0} Ergebnis: {1}</system:String>
     <system:String x:Key="item23">Download abgeschlossen!</system:String>
     <system:String x:Key="item24">Müssen Sie eine andere Version herunterladen? Drücken Sie die Schaltfläche unten, um sich erneut anzumelden!</system:String>
@@ -28,8 +22,6 @@
     <system:String x:Key="item26">Wird gerade heruntergeladen:</system:String>
     <system:String x:Key="item27">Version</system:String>
     <system:String x:Key="item28">Abbrechen</system:String>
-    <system:String x:Key="item29">welche version von</system:String>
-    <system:String x:Key="item30">möchten Sie installieren?</system:String>
     <system:String x:Key="item31">JANUAR 2015</system:String>
     <system:String x:Key="item32">DEZEMBER 2016</system:String>
     <system:String x:Key="item33">Möchten Sie den Download von H1Z1: Just Survive wirklich abbrechen?</system:String>
@@ -48,9 +40,7 @@
     <system:String x:Key="item46">Klicken Sie hier, um die neueste Version des Servers herunterzuladen.</system:String>
     <system:String x:Key="item47">Klicken Sie hier, um den neuesten stabilen Build des Servers herunterzuladen.</system:String>
     <system:String x:Key="item48">Suche nach Aktualisierungen...</system:String>
-    <system:String x:Key="item49">Bitte warten</system:String>
     <system:String x:Key="item50">Bitte stellen Sie sicher, dass Ihre E-Mails für den 2 Auth. Code geöffnet sind, nachdem Sie sich bei Ihrem Steam Konto angemeldet haben.</system:String>
-    <system:String x:Key="item51">Sie scheinen kein Akatives Verzeichnis festgelegt zu haben.\n\nStellen Sie dies im Menü unter Einstellungen ein.</system:String>
     <system:String x:Key="item52">Sie scheinen keine Serverdateien installiert zu haben. Installieren Sie diese im Menü unter Einstellungen.</system:String>
     <system:String x:Key="item53">Fehler beim Starten des Servers:</system:String>
     <system:String x:Key="item54">wird heruntergeladen...</system:String>
@@ -63,7 +53,6 @@
     <system:String x:Key="item61">Alle Details zum Update anzeigen...</system:String>
     <system:String x:Key="item62">Einstellungen...</system:String>
     <system:String x:Key="item63">Und ein besonderes Dankeschön an alle, die sich der Community angeschlossen und die Motivation am Leben erhalten haben!</system:String>
-    <system:String x:Key="item64">Community beitreten</system:String>
     <system:String x:Key="item65">Über das Projekt...</system:String>
     <system:String x:Key="item66">GitHub-Informationen können nicht abgerufen werden:</system:String>
     <system:String x:Key="item67">Nicht jetzt</system:String>
@@ -79,26 +68,17 @@
     <system:String x:Key="item77">Authentifizierungscode</system:String>
     <system:String x:Key="item78">Bitte geben Sie den Zwei-Faktor-Authentifizierungscode ein, der an Ihre Steam-App gesendet wurde.</system:String>
     <system:String x:Key="item79">Bitte geben Sie den Zwei-Faktor-Authentifizierungscode ein, der an Ihre E-Mail gesendet wurde.</system:String>
-    <system:String x:Key="item80">Speichere vor dem Laden die Konfiguration</system:String>
-    <system:String x:Key="item81">Bitte geben Sie Ihren Zwei Faktor Authentifizierungscode ein.</system:String>
-    <system:String x:Key="item83">Fehler beim Abrufen des CDN Tokens für den Server {0} Depot {1}</system:String>
     <system:String x:Key="item84">Es konnten keine Depots zum Herunterladen für die App gefunden werden {0}</system:String>
     <system:String x:Key="item85">Depot {0} nicht für die App gelistet {1}</system:String>
-    <system:String x:Key="item86">Manifest {0} ({1})...</system:String>
-    <system:String x:Key="item87">Ja</system:String>
-    <system:String x:Key="item88">Nein</system:String>
     <system:String x:Key="item89">Das ausgewählte Verzeichnis ist nicht leer.\n\nMöchten Sie trotzdem fortfahren?</system:String>
     <system:String x:Key="item91">wird bearbeitet...</system:String>
     <system:String x:Key="item92">OK</system:String>
-    <system:String x:Key="item93">Aufgabe fehlgeschlagen</system:String>
     <system:String x:Key="item95">Beim Installieren des Patches 2015 ist ein Fehler aufgetreten:</system:String>
     <system:String x:Key="item97">Beim Installieren des Patches 2016 ist ein Fehler aufgetreten:</system:String>
-    <system:String x:Key="item98">Patchdateien für 2015 herunterladen...</system:String>
     <system:String x:Key="item99">entpacke Pach Dateien...</system:String>
     <system:String x:Key="item100">Lösche .zip Datei...</system:String>
     <system:String x:Key="item101">Fertig. (Verstrichene Zeit:</system:String>
     <system:String x:Key="item102">Patch Dateien für die Spielversion 2015 wurden installiert.</system:String>
-    <system:String x:Key="item103">Lade Pach Dateien für 2016 herunter...</system:String>
     <system:String x:Key="item104">Patch Dateien für die Spielversion 2016 wurden installiert.</system:String>
     <system:String x:Key="item105">Neusten Server installieren...</system:String>
     <system:String x:Key="item107">Beim Installieren des neuesten Servers ist ein Fehler aufgetreten:</system:String>
@@ -108,9 +88,7 @@
     <system:String x:Key="item112">Der Stable Server wurde installiert.</system:String>
     <system:String x:Key="item113">Überprüfe alte Dateien...</system:String>
     <system:String x:Key="item114">Entferne alte Dateien...</system:String>
-    <system:String x:Key="item115">Lade Serverdateien herunter...</system:String>
     <system:String x:Key="item116">Entpacke Serverdatei...</system:String>
-    <system:String x:Key="item117">Lade NodeJS standalone herunter...</system:String>
     <system:String x:Key="item118">Entpacke node Dateien...</system:String>
     <system:String x:Key="item120">Bitte schließe H1Z1.</system:String>
     <system:String x:Key="item121">H1Z1.exe wird gerade verwendet\n\nSchließen Sie alle offenen Instanzen von H1Z1.</system:String>
@@ -139,7 +117,6 @@
     <system:String x:Key="item145">Server IP...</system:String>
     <system:String x:Key="item146">Dieser Eintrag kann nicht gelöscht werden.</system:String>
     <system:String x:Key="item147">Möchten Sie diesen Server wirklich löschen?</system:String>
-    <system:String x:Key="item148">Lade anlagen Pach für 2015 herunter...</system:String>
     <system:String x:Key="item149">Entpacke anlagen Dateien...</system:String>
     <system:String x:Key="item150">PATCHEN</system:String>
     <system:String x:Key="item151">Server Name oder IP ungültig.</system:String>
@@ -167,11 +144,12 @@
     <system:String x:Key="item173">Melde einen technischen fehler...</system:String>
     <system:String x:Key="item174">Hier können Sie alle Fehler melden, die Sie im Spiel bei der Verwendung der H1Emu-Serverdateien erlebt haben:</system:String>
     <system:String x:Key="item175">Hier können Sie Fehler melden, die Ihnen bei der Verwendung des H1Emu Launcher aufgefallen sind:</system:String>
-    <system:String x:Key="item176">Löschen Sie Ihre Singleplayer-Daten...</system:String>
+    <system:String x:Key="item176">Löschen Ihrer Singleplayer-Daten.</system:String>
     <system:String x:Key="item177">Keine Singleplayer-Daten gefunden.</system:String>
     <system:String x:Key="item178">Durch das Löschen Ihrer Einzelspieler-Daten können eventuell auftretende Probleme behoben werden. Seien Sie gewarnt, dass Sie jeglichen Fortschritt verlieren.\n\nMöchten Sie fortfahren?</system:String>
     <system:String x:Key="item179">Singleplayer-Daten erfolgreich gelöscht.</system:String>
-    <system:String x:Key="item180">Der von Ihnen verwendete Kontoschlüssel ist gesperrt.</system:String>
-    <system:String x:Key="item181">Der von Ihnen verwendete Kontoschlüssel ist in der H1Emu-Datenbank nicht gültig.\n\nBitte überprüfen Sie, ob Sie den Schlüssel richtig eingegeben haben.</system:String>
-    <system:String x:Key="item182">Bei der Validierung Ihres Kontoschlüssels ist ein Fehler aufgetreten:</system:String>
+    <system:String x:Key="item180">Der von Ihnen verwendete Kontoschlüssel ist in der H1Emu-Datenbank nicht gültig.\n\nBitte überprüfen Sie, ob Sie den Schlüssel richtig eingegeben haben.</system:String>
+    <system:String x:Key="item181">Der von Ihnen verwendete Kontoschlüssel ist gesperrt.</system:String>
+    <system:String x:Key="item182">Unbekannter Antwortcode beim Überprüfen der Gültigkeit Ihres Kontoschlüssels:</system:String>
+    <system:String x:Key="item183">Bei der Validierung Ihres Kontoschlüssels ist ein Fehler aufgetreten:</system:String>
 </ResourceDictionary>
