--- a/H1EmuLauncher/Language/StringResources.fr.xaml
+++ b/H1EmuLauncher/Language/StringResources.fr.xaml
@@ -5,22 +5,16 @@
     <system:String x:Key="item1">Une mise à jour est disponible, voulez vous la télécharger?</system:String>
     <system:String x:Key="item2">Mise à jour</system:String>
     <system:String x:Key="item3">Màj Version</system:String>
-    <system:String x:Key="item4">Appuyez sur "lancer" ici pour lancer le serveur local.</system:String>
-    <system:String x:Key="item5">Appuyez sur "jouer" ici pour vous connecter à un serveur local.</system:String>
-    <system:String x:Key="item6">Appuyez sur "connecter" ici pour vous connecter au serveur de test H1Emu. (2015 seulement)</system:String>
-    <system:String x:Key="item7">LANCER</system:String>
+    <system:String x:Key="item4">S'il vous plaît, attendez</system:String>
     <system:String x:Key="item8">JOUER</system:String>
-    <system:String x:Key="item9">CONNEXION</system:String>
     <system:String x:Key="item10">AVERTISSEMENT:</system:String>
     <system:String x:Key="item11">Vous devez posséder H1Z1 : Just Survive sur votre compte Steam pour pouvoir le télécharger. Ce projet ne soutient pas le piratage.</system:String>
     <system:String x:Key="item12">Rejoignez la communauté sur</system:String>
     <system:String x:Key="item13">Erreur au lancement du jeu :</system:String>
     <system:String x:Key="item14">Jeu introuvable dans le répertoire spécifié.</system:String>
-    <system:String x:Key="item15">Il n'y a pas de serveur de test pour cette version du jeu actuellement. (décembre 2016)</system:String>
-    <system:String x:Key="item16">Le répertoire sélectionné ne contient pas de fichiers patch. Voulez-vous quand même continuer ? (Vous ne pourrez pas vous connecter aux serveurs)</system:String>
+    <system:String x:Key="item15">Vous devez posséder H1Z1: Just Survive sur votre compte Steam pour pouvoir télécharger.</system:String>
     <system:String x:Key="item17">Impossible de se connecter à Steam :</system:String>
     <system:String x:Key="item18">AJOUTER</system:String>
-    <system:String x:Key="item19">• Statut •</system:String>
     <system:String x:Key="item21">La clé de dépôt pour {0} obtenue , résultat : {1}</system:String>
     <system:String x:Key="item23">Téléchargement terminé !</system:String>
     <system:String x:Key="item24">Vous avez besoin de télécharger une autre version ? Appuyez sur le bouton ci-dessous pour vous connecter à nouveau !</system:String>
@@ -28,8 +22,6 @@
     <system:String x:Key="item26">Actuellement en cours de téléchargement :</system:String>
     <system:String x:Key="item27">version</system:String>
     <system:String x:Key="item28">ANNULER</system:String>
-    <system:String x:Key="item29">Quelle version de</system:String>
-    <system:String x:Key="item30">souhaitez-vous installer ?</system:String>
     <system:String x:Key="item31">JANVIER 2015</system:String>
     <system:String x:Key="item32">DÉCEMBRE 2016</system:String>
     <system:String x:Key="item33">Êtes-vous sûr de vouloir annuler le téléchargement de la version H1Z1 : Just Survive ?</system:String>
@@ -48,9 +40,7 @@
     <system:String x:Key="item46">Cliquez ici pour télécharger la dernière version du serveur.</system:String>
     <system:String x:Key="item47">Cliquez ici pour télécharger la dernière version stable du serveur.</system:String>
     <system:String x:Key="item48">Vérification des mises à jour...</system:String>
-    <system:String x:Key="item49">Veuillez patienter</system:String>
     <system:String x:Key="item50">Veuillez vous assurer que vos emails sont ouverts pour le code 2-Auth après vous être connecté à votre compte Steam.</system:String>
-    <system:String x:Key="item51">Il semble que vous n'ayez pas défini de répertoire actif. Définissez-le dans le menu Paramètres.</system:String>
     <system:String x:Key="item52">Vous ne semblez pas avoir installé les fichiers du serveur.\n\nInstall Installez-les dans le menu Paramètres.</system:String>
     <system:String x:Key="item53">Erreur de lancement du serveur:</system:String>
     <system:String x:Key="item54">Téléchargement en cours...</system:String>
@@ -63,7 +53,6 @@
     <system:String x:Key="item61">Voir tous les détails de la mise à jour...</system:String>
     <system:String x:Key="item62">Paramètres...</system:String>
     <system:String x:Key="item63">Et un grand merci à tous ceux qui ont rejoint la communauté et qui encouragent les développeurs!</system:String>
-    <system:String x:Key="item64">Rejoindre la communauté</system:String>
     <system:String x:Key="item65">A propos du projet...</system:String>
     <system:String x:Key="item66">Impossible de récupérer les informations GitHub:</system:String>
     <system:String x:Key="item67">Pas maintenant</system:String>
@@ -79,26 +68,17 @@
     <system:String x:Key="item77">Code d'autorisation</system:String>
     <system:String x:Key="item78">Veuillez saisir le code d'authentification à deux facteurs envoyé à votre application Steam.</system:String>
     <system:String x:Key="item79">Veuillez saisir le code d'authentification à deux facteurs envoyé à votre adresse e-mail.</system:String>
-    <system:String x:Key="item80">Sauvegarde de la configuration avant le chargement</system:String>
-    <system:String x:Key="item81">Veuillez entrer votre code d'authentification à deux facteurs.</system:String>
-    <system:String x:Key="item83">Échec de la récupération du jeton CDN pour le serveur {0} depot {1}</system:String>
     <system:String x:Key="item84">Impossible de trouver des dépôts à télécharger pour l'application. {0}</system:String>
     <system:String x:Key="item85">Dépôt {0} non listé pour l'application {1}</system:String>
-    <system:String x:Key="item86">Manifestation {0} ({1})...</system:String>
-    <system:String x:Key="item87">Oui</system:String>
-    <system:String x:Key="item88">Non</system:String>
     <system:String x:Key="item89">Le répertoire sélectionné n'est pas vide.\n\nVoulez-vous continuer quand même?</system:String>
     <system:String x:Key="item91">Traitement en cours...</system:String>
     <system:String x:Key="item92">OK</system:String>
-    <system:String x:Key="item93">Échec de la tâche</system:String>
     <system:String x:Key="item95">Une erreur s'est produite lors de l'installation du patch 2015:</system:String>
     <system:String x:Key="item97">Une erreur s'est produite lors de l'installation du patch 2016:</system:String>
-    <system:String x:Key="item98">Téléchargement des fichiers de correction pour 2015...</system:String>
     <system:String x:Key="item99">Décompression des fichiers de correction...</system:String>
     <system:String x:Key="item100">Suppression d'un fichier .zip...</system:String>
     <system:String x:Key="item101">Terminé. (Temps écoulé:</system:String>
     <system:String x:Key="item102">Les fichiers de correction pour la version 2015 du jeu ont été installés.</system:String>
-    <system:String x:Key="item103">Téléchargement des fichiers de correction pour 2016...</system:String>
     <system:String x:Key="item104">Les fichiers de correction pour la version 2016 du jeu ont été installés.</system:String>
     <system:String x:Key="item105">Installation du dernier serveur...</system:String>
     <system:String x:Key="item107">Une erreur s'est produite lors de l'installation du dernier serveur:</system:String>
@@ -108,9 +88,7 @@
     <system:String x:Key="item112">Le serveur stable est installé.</system:String>
     <system:String x:Key="item113">Vérification des anciens fichiers...</system:String>
     <system:String x:Key="item114">Suppression d'anciens fichiers...</system:String>
-    <system:String x:Key="item115">Téléchargement des fichiers du serveur...</system:String>
     <system:String x:Key="item116">Décompression des fichiers du serveur...</system:String>
-    <system:String x:Key="item117">Décompression des fichiers NodeJS...</system:String>
     <system:String x:Key="item118">Décompression des fichiers de nœuds...</system:String>
     <system:String x:Key="item120">Veuillez fermer H1Z1.</system:String>
     <system:String x:Key="item121">H1Z1.exe est actuellement en cours d'utilisation.\n\nVeuillez fermez toutes applications d'H1Z1 en cours d'utilisations.</system:String>
@@ -139,7 +117,6 @@
     <system:String x:Key="item145">IP du serveur...</system:String>
     <system:String x:Key="item146">Vous ne pouvez pas supprimer cette entrée.</system:String>
     <system:String x:Key="item147">Êtes-vous sur de vouloir supprimer ce serveur?</system:String>
-    <system:String x:Key="item148">Téléchargement du patch des assets pour le client 2015...</system:String>
     <system:String x:Key="item149">Décompression des fichiers d'assets</system:String>
     <system:String x:Key="item150">PATCHING</system:String>
     <system:String x:Key="item151">Nom du serveur ou IP non valide.</system:String>
@@ -167,11 +144,12 @@
     <system:String x:Key="item173">Signaler un bug...</system:String>
     <system:String x:Key="item174">Ici, vous pouvez signaler tous les bogues que vous avez rencontrés dans le jeu lors de l'utilisation des fichiers du serveur H1Emu:</system:String>
     <system:String x:Key="item175">Ici, vous pouvez signaler tous les bogues que vous avez rencontrés lors de l'utilisation du lanceur H1Emu:</system:String>
-    <system:String x:Key="item176">supprimer vos données solo...</system:String>
+    <system:String x:Key="item176">suppression de vos données solo.</system:String>
     <system:String x:Key="item177">Aucune donnée solo trouvée.</system:String>
     <system:String x:Key="item178">La suppression de vos données solo peut résoudre tous les problèmes auxquels vous êtes confrontés, sachez que vous perdrez toute progression.\n\nVoulez-vous continuer?</system:String>
     <system:String x:Key="item179">Données solo supprimées avec succès.</system:String>
-    <system:String x:Key="item180">La clé de compte que vous utilisez est interdite.</system:String>
-    <system:String x:Key="item181">La clé de compte que vous utilisez n'est pas valide dans la base de données H1Emu.\n\nVeuillez vérifier que vous avez saisi la clé correctement.</system:String>
-    <system:String x:Key="item182">Une erreur s'est produite lors de la validation de votre clé de compte:</system:String>
+    <system:String x:Key="item180">La clé de compte que vous utilisez n'est pas valide dans la base de données H1Emu.\n\nVeuillez vérifier que vous avez saisi la clé correctement.</system:String>
+    <system:String x:Key="item181">La clé de compte que vous utilisez est interdite.</system:String>
+    <system:String x:Key="item182">Code de réponse inconnu lors de la vérification de la validité de votre clé de compte:</system:String>
+    <system:String x:Key="item183">Une erreur s'est produite lors de la validation de votre clé de compte:</system:String>
 </ResourceDictionary>
