--- a/H1EmuLauncher/Language/StringResources.nl-NL.xaml
+++ b/H1EmuLauncher/Language/StringResources.nl-NL.xaml
@@ -5,22 +5,16 @@
     <system:String x:Key="item1">Een niewe versie is beschikbaar, wilt u deze instaleren?</system:String>
     <system:String x:Key="item2">INSTALEREN</system:String>
     <system:String x:Key="item3">Versie</system:String>
-    <system:String x:Key="item4">Klik opstarten hier om een locale solo server op te starten.</system:String>
-    <system:String x:Key="item5">Klik spelen hier om te verbinden met een locale server.</system:String>
-    <system:String x:Key="item6">Klik verbinden hier om te verbinden met de H1Emu test server te verbinden (enkel 2015)</system:String>
-    <system:String x:Key="item7">STARTEN</system:String>
+    <system:String x:Key="item4">Even geduld aub</system:String>
     <system:String x:Key="item8">SPELEN</system:String>
-    <system:String x:Key="item9">VERBINDEN</system:String>
     <system:String x:Key="item10">WAARSCHUWING:</system:String>
     <system:String x:Key="item11">Je moet H1Z1: Just Survive op steam hebben om het te kunnen downloaden. Dit project ondersteund geen piraterij.</system:String>
     <system:String x:Key="item12">word lid van de gemeenschap via:</system:String>
     <system:String x:Key="item13">Fout tijdens het opstarten van H1Z1:</system:String>
     <system:String x:Key="item14">Spel niet gevonden in gespecificeerde map.</system:String>
-    <system:String x:Key="item15">Er is geen test server voor deze versie van het spel op dit moment. (December 2016)</system:String>
-    <system:String x:Key="item16">De geselecteerde map heeft geen patch bestanden. \n\nWil je toch verder gaan? (Je zult niet kunnen verbinden met servers)</system:String>
+    <system:String x:Key="item15">Je moet H1Z1: Just Survive op je Steam-account hebben om te kunnen downloaden.</system:String>
     <system:String x:Key="item17">Kan niet inloggen op Steam:</system:String>
     <system:String x:Key="item18">TOEVOEGEN</system:String>
-    <system:String x:Key="item19">• Status •</system:String>
     <system:String x:Key="item21">Kreeg depotsleutel voor {0} resultaat: {1}</system:String>
     <system:String x:Key="item23">Download voltooid</system:String>
     <system:String x:Key="item24">Een andere versie nodig? Klik de knop om opnieuw in te loggen!</system:String>
@@ -28,8 +22,6 @@
     <system:String x:Key="item26">aan het downloaden:</system:String>
     <system:String x:Key="item27">versie</system:String>
     <system:String x:Key="item28">ANULEREN</system:String>
-    <system:String x:Key="item29">Welk versie van</system:String>
-    <system:String x:Key="item30">wil je instaleren?</system:String>
     <system:String x:Key="item31">JANUARI 2015</system:String>
     <system:String x:Key="item32">DECEMBER 2016</system:String>
     <system:String x:Key="item33">Weet je zeker dat je de download van H1Z1: Just Survive wilt anuleren?</system:String>
@@ -48,9 +40,7 @@
     <system:String x:Key="item46">Klik hier voor de laatste versie van de server te downoaden.</system:String>
     <system:String x:Key="item47">Klik hier voor de laatste stabiele versie van de server te downoaden.</system:String>
     <system:String x:Key="item48">Controlleren op nieuwe versies...</system:String>
-    <system:String x:Key="item49">Even geduld</system:String>
     <system:String x:Key="item50">Zorg ervoor dat je e-mails open zijn voor de 2-Auth-code nadat je bent ingelogd op je Steam-account.</system:String>
-    <system:String x:Key="item51">Er is geen actieve map ingesteld.\n\nZet deze via het instellingen menu.</system:String>
     <system:String x:Key="item52">Er zijn geen server bestanden geïnstalleerd installed.\n\nInstaleer deze via het instellingen menu.</system:String>
     <system:String x:Key="item53">Error tijdens het opstarten server:</system:String>
     <system:String x:Key="item54">Downloaden...</system:String>
@@ -63,7 +53,6 @@
     <system:String x:Key="item61">Bekijk alle details van update...</system:String>
     <system:String x:Key="item62">Instellingen...</system:String>
     <system:String x:Key="item63">En een speciale dank aan iedereen die zich aan de gemeenschap heeft gesloten en de motivatie levendig heeft gehouden!</system:String>
-    <system:String x:Key="item64">Voeg je toe bij de gemeenschap</system:String>
     <system:String x:Key="item65">Over het project...</system:String>
     <system:String x:Key="item66">Ophalen Github informatie mislukt:</system:String>
     <system:String x:Key="item67">Niet nu</system:String>
@@ -79,26 +68,17 @@
     <system:String x:Key="item77">Auth Code</system:String>
     <system:String x:Key="item78">Voer de tweefactorauthenticatiecode in die naar je Steam-app is verzonden.</system:String>
     <system:String x:Key="item79">Voer de tweefactorauthenticatiecode in die naar uw e-mail is verzonden.</system:String>
-    <system:String x:Key="item80">Config is opgeslagen voor het laden</system:String>
-    <system:String x:Key="item81">Voer uw 2-factor authenticatie code in.</system:String>
-    <system:String x:Key="item83">Ophalen CDN token voor server {0} depot {1} mislukt</system:String>
     <system:String x:Key="item84">Kon geen deopt vinden om te downloaden voor app {0}</system:String>
     <system:String x:Key="item85">Depot {0} staat niet in lijst voor app {1}</system:String>
-    <system:String x:Key="item86">Manifest {0} ({1})...</system:String>
-    <system:String x:Key="item87">Ja</system:String>
-    <system:String x:Key="item88">Nee</system:String>
     <system:String x:Key="item89">De geselecteerde map is niet leeg.\n\nWit u toch verder gaan?</system:String>
     <system:String x:Key="item91">Verwerken...</system:String>
     <system:String x:Key="item92">OK</system:String>
-    <system:String x:Key="item93">Taak mislukt</system:String>
     <system:String x:Key="item95">Er trad een fout op tijdens het installeren van de 2015 patch:</system:String>
     <system:String x:Key="item97">Er trad een fout op tijdens het installeren van de 2016 patch:</system:String>
-    <system:String x:Key="item98">Downloaden patch bestand voor 2015...</system:String>
     <system:String x:Key="item99">Unzippen patch bestand...</system:String>
     <system:String x:Key="item100">Verwijderen.zip bestand...</system:String>
     <system:String x:Key="item101">Klaar. (Elapsed time:</system:String>
     <system:String x:Key="item102">Patch bestanden voor spel versie 2015 zijn geïnstalleerd.</system:String>
-    <system:String x:Key="item103">Downloaden patch bestanden voor 2016...</system:String>
     <system:String x:Key="item104">Patch bestanden voor spel versie 2016 zijn geïnstalleerd.</system:String>
     <system:String x:Key="item105">Meest recente server instaleren...</system:String>
     <system:String x:Key="item107">Er was een fout tijdens instaleren van de laatste server:</system:String>
@@ -108,9 +88,7 @@
     <system:String x:Key="item112">The stable server has been installed.</system:String>
     <system:String x:Key="item113">Controlleren op oude bestanden...</system:String>
     <system:String x:Key="item114">Oude bestanden verwijderen...</system:String>
-    <system:String x:Key="item115">Downloaden server bestanden...</system:String>
     <system:String x:Key="item116">Unzippen server bestanden...</system:String>
-    <system:String x:Key="item117">Downloaden NodeJS standalone...</system:String>
     <system:String x:Key="item118">Unzippen node bestanden...</system:String>
     <system:String x:Key="item120">Sluit alstublieft H1Z1.</system:String>
     <system:String x:Key="item121">H1Z1.exe is momenteel in gebruik.\n\nSluit alle instancies van H1Z1.</system:String>
@@ -139,7 +117,6 @@
     <system:String x:Key="item145">Server IP...</system:String>
     <system:String x:Key="item146">Kan ingang niet verwijderen.</system:String>
     <system:String x:Key="item147">Wil je de server echt verwijderen?</system:String>
-    <system:String x:Key="item148">Downloaden asset patch voor 2015...</system:String>
     <system:String x:Key="item149">Unzippen asset bestanden...</system:String>
     <system:String x:Key="item150">PATCHING</system:String>
     <system:String x:Key="item151">Server naam of IP niet geldig.</system:String>
@@ -166,11 +143,12 @@
     <system:String x:Key="item173">Een fout melden...</system:String>
     <system:String x:Key="item174">Hier kun je eventuele bugs melden die je in het spel hebt ondervonden tijdens het gebruik van de H1Emu Server-bestanden:</system:String>
     <system:String x:Key="item175">Hier kunt u eventuele bugs melden die u hebt ondervonden tijdens het gebruik van de H1Emu Launcher:</system:String>
-    <system:String x:Key="item176">verwijder je singleplayer-gegevens...</system:String>
+    <system:String x:Key="item176">het verwijderen van uw singleplayer-gegevens.</system:String>
     <system:String x:Key="item177">Geen singleplayergegevens gevonden.</system:String>
     <system:String x:Key="item178">Als je je singleplayergegevens verwijdert, kunnen eventuele problemen worden opgelost. Wees gewaarschuwd dat je alle voortgang kwijtraakt.\n\nWilt u doorgaan?</system:String>
     <system:String x:Key="item179">Singleplayer-gegevens succesvol verwijderd.</system:String>
-    <system:String x:Key="item180">De accountsleutel die u gebruikt, is verbannen.</system:String>
-    <system:String x:Key="item181">De accountsleutel die u gebruikt, is niet geldig in de H1Emu-database.\n\nControleer of u de sleutel correct hebt ingevoerd.</system:String>
-    <system:String x:Key="item182">Er is een fout opgetreden bij het valideren van uw accountsleutel:</system:String>
+    <system:String x:Key="item180">De accountsleutel die u gebruikt, is niet geldig in de H1Emu-database.\n\nControleer of u de sleutel correct hebt ingevoerd.</system:String>
+    <system:String x:Key="item181">De accountsleutel die u gebruikt, is verbannen.</system:String>
+    <system:String x:Key="item182">Onbekende responscode tijdens het controleren van de geldigheid van uw accountsleutel:</system:String>
+    <system:String x:Key="item183">Er is een fout opgetreden bij het valideren van uw accountsleutel:</system:String>
 </ResourceDictionary>
