--- a/H1EmuLauncher/Language/StringResources.pl-PL.xaml
+++ b/H1EmuLauncher/Language/StringResources.pl-PL.xaml
@@ -5,22 +5,16 @@
     <system:String x:Key="item1">Dostępna jest nowa aktualizacja, Czy chcesz zaktualizować teraz?</system:String>
     <system:String x:Key="item2">AKTUALIZACJA</system:String>
     <system:String x:Key="item3">Wersja</system:String>
-    <system:String x:Key="item4">Użyj przycisku URUCHOM, aby uruchomić serwer lokalny.</system:String>
-    <system:String x:Key="item5">Użyj przycisku GRAJ, aby połączyć się z serwerem lokalnym.</system:String>
-    <system:String x:Key="item6">Użyj przycisku POŁĄCZ, aby połączyć się z serwem testowym H1emu. (tylko 2015)</system:String>
-    <system:String x:Key="item7">URUCHOM</system:String>
+    <system:String x:Key="item4">Proszę czekać</system:String>
     <system:String x:Key="item8">GRAJ</system:String>
-    <system:String x:Key="item9">Połącz</system:String>
     <system:String x:Key="item10">UWAGA:</system:String>
     <system:String x:Key="item11">Musisz posiadać H1Z1: Just Survive na twoim koncie Steam, aby pobrać. Nie wspieramy piractwa.</system:String>
     <system:String x:Key="item12">Dołącz do społeczności: </system:String>
     <system:String x:Key="item13">Błąd podczas startu gry:</system:String>
     <system:String x:Key="item14">Nie znaleziono gry w podanej ścieżce.</system:String>
     <system:String x:Key="item15">Dla tej wersji gry nie ma serwera testowego. (Grudzień 2016)</system:String>
-    <system:String x:Key="item16">Wybrana ścieżka nie posiada patcha.\n\nCzy chcesz kontynuować mimo to? (Brak możliwości wejścia na serwery)</system:String>
     <system:String x:Key="item17">Nie można zalogować się do Steam:</system:String>
     <system:String x:Key="item18">DODAJ</system:String>
-    <system:String x:Key="item19">• Status •</system:String>
     <system:String x:Key="item21">Otrzymano klucz: {1} dla {0}</system:String>
     <system:String x:Key="item23">Pobieranie zakończone!</system:String>
     <system:String x:Key="item24">Chcesz pobrać inną wersję? Użyj przycisku poniżej, aby zalogować się ponownie!</system:String>
@@ -28,8 +22,6 @@
     <system:String x:Key="item26">Aktualne pobieranie:</system:String>
     <system:String x:Key="item27">wersja</system:String>
     <system:String x:Key="item28">ANULUJ</system:String>
-    <system:String x:Key="item29">Którą wersję</system:String>
-    <system:String x:Key="item30">chcesz zainstalować?</system:String>
     <system:String x:Key="item31">STYCZEŃ 2015</system:String>
     <system:String x:Key="item32">GRUDZIEŃ 2016</system:String>
     <system:String x:Key="item33">Czy jesteś pewien, że chcesz anulować pobieranie H1Z1: Just Survive w wersji</system:String>
@@ -48,9 +40,7 @@
     <system:String x:Key="item46">Kliknij tutaj, aby zainstalować najnowszą wersję serwera.</system:String>
     <system:String x:Key="item47">Kliknij tutaj, aby zainstalować stabilną wersję serwera.</system:String>
     <system:String x:Key="item48">Sprawdzanie aktualizacji...</system:String>
-    <system:String x:Key="item49">Proszę czekać</system:String>
     <system:String x:Key="item50">Upewnij się, że masz otwarty email, aby potwierdzić logowanie do konta Steam.</system:String>
-    <system:String x:Key="item51">Wygląda na to, że nie wybrałeś jeszcze ścieżki do plików gry.\n\nSet this in the Settings menu.</system:String>
     <system:String x:Key="item52">Wygląda na to, że nie zainstalowałeś jeszcze plików serwerowych.\n\nInstall these in the Settings menu.</system:String>
     <system:String x:Key="item53">Błąd podczas startu serwera:</system:String>
     <system:String x:Key="item54">Pobieranie...</system:String>
@@ -63,7 +53,6 @@
     <system:String x:Key="item61">Sprawdź pełen opis aktuzacji...</system:String>
     <system:String x:Key="item62">Ustawienia...</system:String>
     <system:String x:Key="item63">Specjalne podziękowania dla wszystkich, którzy dołączyli do społeczności!</system:String>
-    <system:String x:Key="item64">Dołącz do naszej społeczności</system:String>
     <system:String x:Key="item65">O nas...</system:String>
     <system:String x:Key="item66">Nie można pobrać informacji z GitHub:</system:String>
     <system:String x:Key="item67">Nie teraz</system:String>
@@ -79,26 +68,17 @@
     <system:String x:Key="item77">Klucz Autoryzacji</system:String>
     <system:String x:Key="item78">Wprowadź dwuskładnikowy kod uwierzytelniający wysłany do Twojej aplikacji Steam.</system:String>
     <system:String x:Key="item79">Wprowadź dwuskładnikowy kod uwierzytelniający wysłany na Twój adres e-mail.</system:String>
-    <system:String x:Key="item80">Zapisano konfigurację przed załadowaniem</system:String>
-    <system:String x:Key="item81">Wprowadź swój dwuskładnikowy kod uwierzytelniający.</system:String>
-    <system:String x:Key="item83">Nie udało się pobrać tokena CDN dla serwera {0} depot {1}</system:String>
     <system:String x:Key="item84">Nie udało się znaleźć żadnego depota do pobrania dla aplikacji {0}</system:String>
     <system:String x:Key="item85">Depot {0} nie istnieje dla aplikacji {1}</system:String>
-    <system:String x:Key="item86">Manifest {0} ({1})...</system:String>
-    <system:String x:Key="item87">Tak</system:String>
-    <system:String x:Key="item88">Nie</system:String>
     <system:String x:Key="item89">Określona ścieżka nie jest pusta.\n\nCzy chcesz kontynuować mimo to?</system:String>
     <system:String x:Key="item91">Przetwarzanie...</system:String>
     <system:String x:Key="item92">OK</system:String>
-    <system:String x:Key="item93">Niepowodzenie</system:String>
     <system:String x:Key="item95">Wystąpił błąd podczas instalacji patcha dla wersji 2015:</system:String>
     <system:String x:Key="item97">Wystąpił błąd podczas instalacji patcha dla wersji 2016:</system:String>
-    <system:String x:Key="item98">Pobieranie patcha dla wersji 2015...</system:String>
     <system:String x:Key="item99">Rozpakowywanie plików...</system:String>
     <system:String x:Key="item100">Usuwanie pliku .zip...</system:String>
     <system:String x:Key="item101">Zakończono. (Czas:</system:String>
     <system:String x:Key="item102">Zainstalowano patch dla wersji 2015.</system:String>
-    <system:String x:Key="item103">Pobieranie patcha dla wersji 2016...</system:String>
     <system:String x:Key="item104">Zainstalowano patch dla wersji 2016.</system:String>
     <system:String x:Key="item105">Instalowanie najnowszej wersji serwera...</system:String>
     <system:String x:Key="item107">Wystąpił bład podczas instalacji plików serwera:</system:String>
@@ -108,9 +88,7 @@
     <system:String x:Key="item112">Zainstalowano stabilną wersję serwera.</system:String>
     <system:String x:Key="item113">Sprawdzania starych plików...</system:String>
     <system:String x:Key="item114">Usuwanie starych plików...</system:String>
-    <system:String x:Key="item115">Pobieranie plików serwera...</system:String>
     <system:String x:Key="item116">Rozpakowywanie plików serwera...</system:String>
-    <system:String x:Key="item117">Pobieranie NodeJS standalone...</system:String>
     <system:String x:Key="item118">Rozpakowywanie plików node...</system:String>
     <system:String x:Key="item120">Prosze zamknij H1Z1.</system:String>
     <system:String x:Key="item121">H1Z1.exe jest aktualnie uruchomiony.\n\nZamknij uruchomione procesy H1Z1.</system:String>
@@ -139,7 +117,6 @@
     <system:String x:Key="item145">IP serwera...</system:String>
     <system:String x:Key="item146">Nie można tego usunąć.</system:String>
     <system:String x:Key="item147">Czy jesteś pewien, że chcesz usunąć ten serwer?</system:String>
-    <system:String x:Key="item148">Pobieranie assetów dla wersji 2015...</system:String>
     <system:String x:Key="item149">Rozpakowywanie asseów...</system:String>
     <system:String x:Key="item150">PATCHOWANIE</system:String>
     <system:String x:Key="item151">Nazwa serwera lub IP nieprawidłowe.</system:String>
@@ -167,11 +144,12 @@
     <system:String x:Key="item173">Zgłoś błąd...</system:String>
     <system:String x:Key="item174">Tutaj możesz zgłosić wszelkie błędy, których doświadczyłeś w grze podczas korzystania z plików serwera H1Emu:</system:String>
     <system:String x:Key="item175">Tutaj możesz zgłosić wszelkie błędy, których doświadczyłeś podczas korzystania z Launchera H1Emu:</system:String>
-    <system:String x:Key="item176">usuń swoje dane dla jednego gracza...</system:String>
+    <system:String x:Key="item176">usuwanie danych dla jednego gracza.</system:String>
     <system:String x:Key="item177">Nie znaleziono danych dla jednego gracza.</system:String>
     <system:String x:Key="item178">Usunięcie danych trybu jednoosobowego może rozwiązać wszelkie napotkane problemy. Ostrzegamy, że utracisz cały postęp.\n\nCzy chcesz kontynuować?</system:String>
     <system:String x:Key="item179">Pomyślnie usunięto dane dla jednego gracza.</system:String>
-    <system:String x:Key="item180">Klucz konta, którego używasz, jest zablokowany.</system:String>
-    <system:String x:Key="item181">Klucz konta, którego używasz, jest nieprawidłowy w bazie danych H1Emu.\n\nSprawdź, czy klucz został wpisany poprawnie.</system:String>
-    <system:String x:Key="item182">Podczas weryfikacji klucza konta wystąpił błąd:</system:String>
+    <system:String x:Key="item180">Klucz konta, którego używasz, jest nieprawidłowy w bazie danych H1Emu.\n\nSprawdź, czy klucz został wpisany poprawnie.</system:String>
+    <system:String x:Key="item181">Klucz konta, którego używasz, jest zablokowany.</system:String>
+    <system:String x:Key="item182">Nieznany kod odpowiedzi podczas sprawdzania ważności klucza konta:</system:String>
+    <system:String x:Key="item183">Podczas weryfikacji klucza konta wystąpił błąd:</system:String>
 </ResourceDictionary>
