--- a/H1EmuLauncher/Language/StringResources.pt-PT.xaml
+++ b/H1EmuLauncher/Language/StringResources.pt-PT.xaml
@@ -5,22 +5,16 @@
     <system:String x:Key="item1">Uma nova atualização está disponível, quer atualizar agora?</system:String>
     <system:String x:Key="item2">ATUALIZAR</system:String>
     <system:String x:Key="item3">Versão</system:String>
-    <system:String x:Key="item4">Clique em lançar aqui para iniciar o servidor local.</system:String>
-    <system:String x:Key="item5">Clique jogar aqui para conectar-se a um servidor local.</system:String>
-    <system:String x:Key="item6">Clique conectar aqui para conectar-se ao servidor de teste H1Emu. (Apenas versão 2015)</system:String>
-    <system:String x:Key="item7">LANÇAR</system:String>
+    <system:String x:Key="item4">Por favor, espere</system:String>
     <system:String x:Key="item8">JOGAR</system:String>
-    <system:String x:Key="item9">CONECTAR</system:String>
     <system:String x:Key="item10">AVISO:</system:String>
     <system:String x:Key="item11">Tem de possuir H1Z1: Just Survive na sua conta Steam para fazer download do jogo. Este projecto não apoia a pirataria.</system:String>
     <system:String x:Key="item12">Junta-te à comunidade em</system:String>
     <system:String x:Key="item13">Erro ao iniciar o jogo:</system:String>
     <system:String x:Key="item14">O jogo não foi encontrado no diretório especificado.</system:String>
-    <system:String x:Key="item15">Não existe servidor de teste para esta versão do jogo atualmente. (Dezembro de 2016)</system:String>
-    <system:String x:Key="item16">O directório seleccionado não contém ficheiros de correcção.\n\n Gostaria de continuar de qualquer forma? (Não poderá entrar nos outros servidores)</system:String>
+    <system:String x:Key="item15">Aby pobrać, musisz posiadać H1Z1: Just Survive na swoim koncie Steam.</system:String>
     <system:String x:Key="item17">Incapaz de iniciar a sessão no Steam:</system:String>
     <system:String x:Key="item18">ADD</system:String>
-    <system:String x:Key="item19">• Estado •</system:String>
     <system:String x:Key="item21">Chave de depósito para {0} resultado: {1}</system:String>
     <system:String x:Key="item23">Download completo!</system:String>
     <system:String x:Key="item24">Precisa de descarregar outra versão? Prima o botão abaixo para iniciar novamente a sessão!</system:String>
@@ -28,8 +22,6 @@
     <system:String x:Key="item26">Download a decorrer:</system:String>
     <system:String x:Key="item27">versão</system:String>
     <system:String x:Key="item28">CANCELAR</system:String>
-    <system:String x:Key="item29">Qual versão de</system:String>
-    <system:String x:Key="item30">gostaria de instalar?</system:String>
     <system:String x:Key="item31">JANEIRO 2015</system:String>
     <system:String x:Key="item32">DEZEMBRO 2016</system:String>
     <system:String x:Key="item33">Quer realmente cancelar o download desta versão do H1Z1: Just Survive?</system:String>
@@ -48,9 +40,7 @@
     <system:String x:Key="item46">Clique aqui para descarregar a versão recente do servidor.</system:String>
     <system:String x:Key="item47">Clique aqui para descarregar a versão estável do servidor.</system:String>
     <system:String x:Key="item48">A procurar por novas atualizações...</system:String>
-    <system:String x:Key="item49">Por favor aguarde</system:String>
     <system:String x:Key="item50">Por favor, certifique-se de inserir o código de autenticação após iniciar a sua conta Steam.</system:String>
-    <system:String x:Key="item51">Não tem definido uma pasta para instalação. \n\n Corrija isto no menu Definições.</system:String>
     <system:String x:Key="item52">Não tem os ficheiros de servidor instalados.\n\n Instale os ficheiros através do menu Definições.</system:String>
     <system:String x:Key="item53">Erro ao iniciar o servidor:</system:String>
     <system:String x:Key="item54">A descarregar...</system:String>
@@ -63,7 +53,6 @@
     <system:String x:Key="item61">Ver detalhes da atualização...</system:String>
     <system:String x:Key="item62">Definições...</system:String>
     <system:String x:Key="item63">E um agradecimento especial a todos os que aderiram à comunidade e mantiveram viva a motivação!</system:String>
-    <system:String x:Key="item64">Juntar-se à Comunidade</system:String>
     <system:String x:Key="item65">Sobre o projeto...</system:String>
     <system:String x:Key="item66">Incapaz de recuperar informações do GitHub:</system:String>
     <system:String x:Key="item67">Agora não</system:String>
@@ -79,26 +68,17 @@
     <system:String x:Key="item77">código de autenticação</system:String>
     <system:String x:Key="item78">Digite o código de autenticação de dois fatores enviado ao seu aplicativo Steam.</system:String>
     <system:String x:Key="item79">Insira o código de autenticação de dois fatores enviado para o seu e-mail.</system:String>
-    <system:String x:Key="item80">Configuração guardada antes do carregamento</system:String>
-    <system:String x:Key="item81">Por favor introduza o seu código de autenticação de dois factores.</system:String>
-    <system:String x:Key="item83">Falha de recuperação do Token CDN para o servidor {0} depósito {1}</system:String>
     <system:String x:Key="item84">Não foi possível encontrar depósitos para descarregar para a App {0}</system:String>
     <system:String x:Key="item85">Depósito {0} não listado para a App {1}</system:String>
-    <system:String x:Key="item86">Manifesto {0} ({1})...</system:String>
-    <system:String x:Key="item87">Sim</system:String>
-    <system:String x:Key="item88">Não</system:String>
     <system:String x:Key="item89">A pasta seleccionada não está vazia.\n\n Deseja continuar de qualquer forma?</system:String>
     <system:String x:Key="item91">A processar...</system:String>
     <system:String x:Key="item92">OK</system:String>
-    <system:String x:Key="item93">Tarefa falhada</system:String>
     <system:String x:Key="item95">Ocorreu um erro durante a instalação da correção 2015:</system:String>
     <system:String x:Key="item97">Ocorreu um erro durante a instalação da correção 2016:</system:String>
-    <system:String x:Key="item98">A descarregar ficheiros de correção para 2015...</system:String>
     <system:String x:Key="item99">A descompactar os ficheiros de correção...</system:String>
     <system:String x:Key="item100">A eliminar ficheiros .zip...</system:String>
     <system:String x:Key="item101">Completado. (Duração:</system:String>
     <system:String x:Key="item102">Foram instalados ficheiros de correção para a versão 2015 do jogo...</system:String>
-    <system:String x:Key="item103">A descarregar ficheiros de correcção para 2016...</system:String>
     <system:String x:Key="item104">Foram instalados ficheiros de correção para a versão 2016 do jogo</system:String>
     <system:String x:Key="item105">A instalar a versão recente do servidor...</system:String>
     <system:String x:Key="item107">Ocorreu um erro ao instalar a versão recente do servidor:</system:String>
@@ -108,9 +88,7 @@
     <system:String x:Key="item112">A versão estável do servidor foi instalada.</system:String>
     <system:String x:Key="item113">A verificar ficheiros antigos...</system:String>
     <system:String x:Key="item114">A eliminar ficheiros antigos...</system:String>
-    <system:String x:Key="item115">A descarregar ficheiros do servidor...</system:String>
     <system:String x:Key="item116">A descompactar ficheiros do servidor...</system:String>
-    <system:String x:Key="item117">A descarregar NodeJS independente...</system:String>
     <system:String x:Key="item118">A descompactar ficheiros node...</system:String>
     <system:String x:Key="item120">Por favor desligue o H1Z1.</system:String>
     <system:String x:Key="item121">H1Z1.exe está a ser usado.\n\n Feche todas as instâncias do H1Z1.</system:String>
@@ -139,7 +117,6 @@
     <system:String x:Key="item145">IP do servidor...</system:String>
     <system:String x:Key="item146">Não pode apagar esta entrada.</system:String>
     <system:String x:Key="item147">Tem a certeza que quer apagar este servidor?</system:String>
-    <system:String x:Key="item148">A descarregar correção de ativos para 2015...</system:String>
     <system:String x:Key="item149">A descompactar ficheiros ativos...</system:String>
     <system:String x:Key="item150">A CORRIGIR</system:String>
     <system:String x:Key="item151">Nome do servidor ou IP incorretos.</system:String>
@@ -167,11 +144,12 @@
     <system:String x:Key="item173">Reportar um erro...</system:String>
     <system:String x:Key="item174">Aqui você pode relatar quaisquer bugs que você tenha experimentado no jogo ao usar os arquivos do servidor H1Emu:</system:String>
     <system:String x:Key="item175">Aqui você pode relatar quaisquer bugs que você tenha experimentado ao usar o H1Emu Launcher:</system:String>
-    <system:String x:Key="item176">exclua seus dados de um jogador...</system:String>
+    <system:String x:Key="item176">excluindo seus dados singleplayer.</system:String>
     <system:String x:Key="item177">Nenhum dado singleplayer encontrado.</system:String>
     <system:String x:Key="item178">Excluir seus dados de um jogador pode resolver qualquer problema que você esteja enfrentando, esteja avisado de que você perderá todo o progresso.\n\nDeseja continuar?</system:String>
     <system:String x:Key="item179">Dados de um jogador excluídos com sucesso.</system:String>
-    <system:String x:Key="item180">A chave da conta que você está usando foi banida.</system:String>
-    <system:String x:Key="item181">A chave de conta que você está usando não é válida no banco de dados H1Emu.\n\nPor favor, verifique se você digitou a chave corretamente.</system:String>
-    <system:String x:Key="item182">Ocorreu um erro ao validar sua chave de conta:</system:String>
+    <system:String x:Key="item180">A chave de conta que você está usando não é válida no banco de dados H1Emu.\n\nPor favor, verifique se você digitou a chave corretamente.</system:String>
+    <system:String x:Key="item181">A chave da conta que você está usando foi banida.</system:String>
+    <system:String x:Key="item182">Código de resposta desconhecido ao verificar a validade da chave da conta:</system:String>
+    <system:String x:Key="item183">Ocorreu um erro ao validar sua chave de conta:</system:String>
 </ResourceDictionary>
