--- a/H1EmuLauncher/Language/StringResources.ru-RU.xaml
+++ b/H1EmuLauncher/Language/StringResources.ru-RU.xaml
@@ -5,22 +5,16 @@
     <system:String x:Key="item1">Доступно новое обновление, хотите обновить сейчас?</system:String>
     <system:String x:Key="item2">ОБНОВИТЬ</system:String>
     <system:String x:Key="item3">Обновление</system:String>
-    <system:String x:Key="item4">Нажмите здесь, чтобы запустить локальный соло-сервер.</system:String>
-    <system:String x:Key="item5">Нажмите здесь, чтобы подключиться к локальному серверу.</system:String>
-    <system:String x:Key="item6">Нажмите здесь, чтобы подключиться к тестовому серверу H1Emu. (Только версия 2015)</system:String>
-    <system:String x:Key="item7">ЗАПУСК</system:String>
+    <system:String x:Key="item4">Пожалуйста подождите</system:String>
     <system:String x:Key="item8">ИГРАТЬ</system:String>
-    <system:String x:Key="item9">ПОДКЛЮЧИТЬСЯ</system:String>
     <system:String x:Key="item10">ВНИМАНИЕ:</system:String>
     <system:String x:Key="item11">Для загрузки вы должны иметь H1Z1: Just Survive в своей учетной записи Steam. Этот проект не поддерживает пиратство.</system:String>
     <system:String x:Key="item12">Присоединяйтесь к сообществу на</system:String>
     <system:String x:Key="item13">Ошибка запуска игры:</system:String>
     <system:String x:Key="item14">Игра не найдена в указанной директории.</system:String>
-    <system:String x:Key="item15">На данный момент нет тестового сервера для этой версии игры. (Декабрь 2016)</system:String>
-    <system:String x:Key="item16">Выбранный каталог не содержит файлов патчей.\n\nВы хотите продолжить? (Вы не сможете загружаться на серверы)</system:String>
+    <system:String x:Key="item15">Вы должны иметь H1Z1: Just Survive в своей учетной записи Steam, чтобы загрузить.</system:String>
     <system:String x:Key="item17">Невозможно войти в Steam:</system:String>
     <system:String x:Key="item18">ДОБАВИТЬ</system:String>
-    <system:String x:Key="item19">• Статус •</system:String>
     <system:String x:Key="item21">Получен depot key для {0} результат: {1}</system:String>
     <system:String x:Key="item23">Загрузка завершена!</system:String>
     <system:String x:Key="item24">Нужно скачать другую версию? Нажмите кнопку ниже, чтобы снова войти в систему!</system:String>
@@ -28,8 +22,6 @@
     <system:String x:Key="item26">Загружается:</system:String>
     <system:String x:Key="item27">версия</system:String>
     <system:String x:Key="item28">ОТМЕНА</system:String>
-    <system:String x:Key="item29">Какую версию из</system:String>
-    <system:String x:Key="item30">вы хотите установить?</system:String>
     <system:String x:Key="item31">ЯНВАРЬ 2015</system:String>
     <system:String x:Key="item32">ДЕКАБРЬ 2016</system:String>
     <system:String x:Key="item33">Вы действительно хотите отменить загрузку H1Z1: Just Survive версии</system:String>
@@ -48,9 +40,7 @@
     <system:String x:Key="item46">Щелкните здесь, чтобы загрузить последнюю сборку сервера.</system:String>
     <system:String x:Key="item47">Щелкните здесь, чтобы загрузить последнюю стабильную сборку сервера.</system:String>
     <system:String x:Key="item48">Проверка обновлений...</system:String>
-    <system:String x:Key="item49">Пожалуйста подождите</system:String>
     <system:String x:Key="item50">Проверьте вашу электронную почту для кода 2-факторной аутентификации после входа в свою учетную запись Steam.</system:String>
-    <system:String x:Key="item51">Похоже, у вас не установлена активная директория.\n\nУстановите это в меню настроек.</system:String>
     <system:String x:Key="item52">Похоже, у вас не установлены файлы сервера.\n\nУстановите их в меню настроек.</system:String>
     <system:String x:Key="item53">Ошибка запуска сервера:</system:String>
     <system:String x:Key="item54">Загрузка...</system:String>
@@ -63,7 +53,6 @@
     <system:String x:Key="item61">Посмотреть полную информацию об обновлении...</system:String>
     <system:String x:Key="item62">Настройки...</system:String>
     <system:String x:Key="item63">И отдельное спасибо всем, кто присоединился к сообществу и поддерживает нас!</system:String>
-    <system:String x:Key="item64">Вступить в сообщество</system:String>
     <system:String x:Key="item65">О проекте...</system:String>
     <system:String x:Key="item66">Невозможно получить информацию GitHub:</system:String>
     <system:String x:Key="item67">Не сейчас</system:String>
@@ -79,26 +68,17 @@
     <system:String x:Key="item77">Код авторизации</system:String>
     <system:String x:Key="item78">Пожалуйста, введите код двухфакторной аутентификации, отправленный в ваше приложение Steam.</system:String>
     <system:String x:Key="item79">Пожалуйста, введите код двухфакторной аутентификации, отправленный на вашу электронную почту.</system:String>
-    <system:String x:Key="item80">Сохраненный конфиг перед загрузкой</system:String>
-    <system:String x:Key="item81">Пожалуйста, введите свой код двухфакторной аутентификации.</system:String>
-    <system:String x:Key="item83">Не удалось получить токен CDN для сервера {0} depot {1}</system:String>
     <system:String x:Key="item84">Не удалось найти depot для загрузки приложения {0}</system:String>
     <system:String x:Key="item85">Depot {0} нет в списке для приложения {1}</system:String>
-    <system:String x:Key="item86">Manifest {0} ({1})...</system:String>
-    <system:String x:Key="item87">Да</system:String>
-    <system:String x:Key="item88">Нет</system:String>
     <system:String x:Key="item89">Выбранная директория не пустая.\n\nВы хотите продолжить?</system:String>
     <system:String x:Key="item91">Обработка...</system:String>
     <system:String x:Key="item92">OK</system:String>
-    <system:String x:Key="item93">Сбой задачи</system:String>
     <system:String x:Key="item95">Ошибка установки патча 2015:</system:String>
     <system:String x:Key="item97">Ошибка установки патча 2016:</system:String>
-    <system:String x:Key="item98">Загрузка файлов патча для 2015...</system:String>
     <system:String x:Key="item99">Распаковка файлов патча...</system:String>
     <system:String x:Key="item100">Удаление .zip файла...</system:String>
     <system:String x:Key="item101">Готово. (Потраченное время:</system:String>
     <system:String x:Key="item102">Файлы патча для версии 2015 установлены.</system:String>
-    <system:String x:Key="item103">Загрузка файлов патча для 2016...</system:String>
     <system:String x:Key="item104">Файлы патча для версии 2016 установлены.</system:String>
     <system:String x:Key="item105">Установка последней версии сервера...</system:String>
     <system:String x:Key="item107">При установке последней версии сервера произошла ошибка:</system:String>
@@ -108,9 +88,7 @@
     <system:String x:Key="item112">Установлена стабильная версия сервера.</system:String>
     <system:String x:Key="item113">Проверка старых файлов...</system:String>
     <system:String x:Key="item114">Удаление старых файлов...</system:String>
-    <system:String x:Key="item115">Загрузка файлов сервера...</system:String>
     <system:String x:Key="item116">Распаковка файлов сервера...</system:String>
-    <system:String x:Key="item117">Загрузка NodeJS standalone...</system:String>
     <system:String x:Key="item118">Распаковка файлов NodeJS...</system:String>
     <system:String x:Key="item120">Пожалуйста закройте H1Z1.</system:String>
     <system:String x:Key="item121">H1Z1.exe в настоящее время используется.\n\nЗакройте все экземпляры H1Z1.</system:String>
@@ -139,7 +117,6 @@
     <system:String x:Key="item145">IP сервера...</system:String>
     <system:String x:Key="item146">Невозможно удалить эту запись.</system:String>
     <system:String x:Key="item147">Вы уверены, что хотите удалить этот сервер?</system:String>
-    <system:String x:Key="item148">Скачивание патча для актива для 2015...</system:String>
     <system:String x:Key="item149">Распаковка файлов актива...</system:String>
     <system:String x:Key="item150">УСТАНОВКА ПАТЧА</system:String>
     <system:String x:Key="item151">Имя сервера или IP недействителен.</system:String>
@@ -167,11 +144,12 @@
     <system:String x:Key="item173">Сообщить об ошибке...</system:String>
     <system:String x:Key="item174">Здесь вы можете сообщить о любых ошибках, с которыми вы столкнулись в игре при использовании файлов сервера H1Emu:</system:String>
     <system:String x:Key="item175">Здесь вы можете сообщить о любых ошибках, с которыми вы столкнулись при использовании H1Emu Launcher:</system:String>
-    <system:String x:Key="item176">удалите данные одиночной игры...</system:String>
+    <system:String x:Key="item176">удаление ваших данных одиночной игры.</system:String>
     <system:String x:Key="item177">Данные одиночной игры не найдены.</system:String>
     <system:String x:Key="item178">Удаление данных одиночной игры может решить любые проблемы, с которыми вы сталкиваетесь, имейте в виду, что вы потеряете весь прогресс.\n\nХотите продолжить?</system:String>
     <system:String x:Key="item179">Данные одиночной игры успешно удалены.</system:String>
-    <system:String x:Key="item180">Ключ учетной записи, который вы используете, заблокирован.</system:String>
-    <system:String x:Key="item181">Используемый вами ключ учетной записи недействителен в базе данных H1Emu.\n\nУбедитесь, что вы правильно ввели ключ.</system:String>
-    <system:String x:Key="item182">При проверке ключа учетной записи произошла ошибка:</system:String>
+    <system:String x:Key="item180">Используемый вами ключ учетной записи недействителен в базе данных H1Emu.\n\nУбедитесь, что вы правильно ввели ключ.</system:String>
+    <system:String x:Key="item181">Ключ учетной записи, который вы используете, заблокирован.</system:String>
+    <system:String x:Key="item182">Неизвестный код ответа при проверке действительности ключа вашей учетной записи:</system:String>
+    <system:String x:Key="item183">При проверке ключа учетной записи произошла ошибка:</system:String>
 </ResourceDictionary>
