--- a/H1EmuLauncher/Language/StringResources.en.xaml
+++ b/H1EmuLauncher/Language/StringResources.en.xaml
@@ -5,21 +5,16 @@
     <system:String x:Key="item1">A new update is available, would you like to update now?</system:String>
     <system:String x:Key="item2">UPDATE</system:String>
     <system:String x:Key="item3">Version</system:String>
-    <system:String x:Key="item4">Press launch here to launch the local solo server.</system:String>
-    <system:String x:Key="item5">Press play here to connect to a local server.</system:String>
-    <system:String x:Key="item6">Press connect here to connect to the H1Emu test server. (2015 Only)</system:String>
-    <system:String x:Key="item7">LAUNCH</system:String>
+    <system:String x:Key="item4">Please wait</system:String>
     <system:String x:Key="item8">PLAY</system:String>
-    <system:String x:Key="item9">CONNECT</system:String>
     <system:String x:Key="item10">WARNING:</system:String>
     <system:String x:Key="item11">You must own H1Z1: Just Survive on your Steam account in order to download. This project does not support piracy.</system:String>
     <system:String x:Key="item12">Join the Community at</system:String>
     <system:String x:Key="item13">Error launching game:</system:String>
     <system:String x:Key="item14">Game not found in specified directory.</system:String>
-    <system:String x:Key="item16">The selected directory does not contain patch files.\n\nWould you like to continue anyway? (You won't be able to load into servers)</system:String>
+    <system:String x:Key="item15">You must own H1Z1: Just Survive on your Steam account in order to download.</system:String>
     <system:String x:Key="item17">Unable to login to Steam:</system:String>
     <system:String x:Key="item18">ADD</system:String>
-    <system:String x:Key="item19">• Status •</system:String>
     <system:String x:Key="item21">Got depot key for {0} result: {1}</system:String>
     <system:String x:Key="item23">Download complete!</system:String>
     <system:String x:Key="item24">Need to download a different version? Press the button below to login again!</system:String>
@@ -27,8 +22,6 @@
     <system:String x:Key="item26">Currently downloading:</system:String>
     <system:String x:Key="item27">version</system:String>
     <system:String x:Key="item28">CANCEL</system:String>
-    <system:String x:Key="item29">Which version of</system:String>
-    <system:String x:Key="item30">would you like to install?</system:String>
     <system:String x:Key="item31">JANUARY 2015</system:String>
     <system:String x:Key="item32">DECEMBER 2016</system:String>
     <system:String x:Key="item33">Are you sure you would like to cancel the download of H1Z1: Just Survive version</system:String>
@@ -47,9 +40,7 @@
     <system:String x:Key="item46">Click here to download the latest build of the server.</system:String>
     <system:String x:Key="item47">Click here to download the latest stable build of the server.</system:String>
     <system:String x:Key="item48">Checking for updates...</system:String>
-    <system:String x:Key="item49">Please wait</system:String>
     <system:String x:Key="item50">Please make sure your emails are open for the 2-Auth code after logging into your Steam account.</system:String>
-    <system:String x:Key="item51">You don't seem to have an active directory set.\n\nSet this in the Settings menu.</system:String>
     <system:String x:Key="item52">You don't seem to have server files installed.\n\nInstall these in the Settings menu.</system:String>
     <system:String x:Key="item53">Error launching server:</system:String>
     <system:String x:Key="item54">Downloading...</system:String>
@@ -62,7 +53,6 @@
     <system:String x:Key="item61">View full details of the update...</system:String>
     <system:String x:Key="item62">Settings...</system:String>
     <system:String x:Key="item63">And a special thanks to everyone who joined the community and kept the motivation alive!</system:String>
-    <system:String x:Key="item64">Join Community</system:String>
     <system:String x:Key="item65">About the project...</system:String>
     <system:String x:Key="item66">Unable to retrieve GitHub information: {0}\n\nSome information may be missing.</system:String>
     <system:String x:Key="item67">Not Now</system:String>
@@ -78,26 +68,17 @@
     <system:String x:Key="item77">Auth Code</system:String>
     <system:String x:Key="item78">Please enter the two factor authentication code sent to your Steam app.</system:String>
     <system:String x:Key="item79">Please enter the two factor authentication code sent to your email.</system:String>
-    <system:String x:Key="item80">Saved config before loading</system:String>
-    <system:String x:Key="item81">Please enter the two factor authentication code.</system:String>
-    <system:String x:Key="item83">Failed to retrieve CDN token for server {0} depot {1}</system:String>
     <system:String x:Key="item84">Couldn't find any depots to download for app {0}</system:String>
     <system:String x:Key="item85">Depot {0} not listed for app {1}</system:String>
-    <system:String x:Key="item86">Manifest {0} ({1})...</system:String>
-    <system:String x:Key="item87">Yes</system:String>
-    <system:String x:Key="item88">No</system:String>
     <system:String x:Key="item89">The selected directory is not empty.\n\nWould you like to continue anyway?</system:String>
     <system:String x:Key="item91">Processing...</system:String>
     <system:String x:Key="item92">OK</system:String>
-    <system:String x:Key="item93">Task Failed</system:String>
     <system:String x:Key="item95">There was an error installing the 2015 patch:</system:String>
     <system:String x:Key="item97">There was an error installing the 2016 patch:</system:String>
-    <system:String x:Key="item98">Downloading patch files for 2015...</system:String>
     <system:String x:Key="item99">Unzipping patch files...</system:String>
     <system:String x:Key="item100">Deleting .zip file...</system:String>
     <system:String x:Key="item101">Done. (Elapsed time:</system:String>
     <system:String x:Key="item102">Patch files for game version 2015 have been installed.</system:String>
-    <system:String x:Key="item103">Downloading patch files for 2016...</system:String>
     <system:String x:Key="item104">Patch files for game version 2016 have been installed.</system:String>
     <system:String x:Key="item105">Installing latest server...</system:String>
     <system:String x:Key="item107">There was an error installing the latest server:</system:String>
@@ -107,9 +88,7 @@
     <system:String x:Key="item112">The stable server has been installed.</system:String>
     <system:String x:Key="item113">Checking for old files...</system:String>
     <system:String x:Key="item114">Deleting old files...</system:String>
-    <system:String x:Key="item115">Downloading server files...</system:String>
     <system:String x:Key="item116">Unzipping server files...</system:String>
-    <system:String x:Key="item117">Downloading NodeJS standalone...</system:String>
     <system:String x:Key="item118">Unzipping node files...</system:String>
     <system:String x:Key="item120">Please close H1Z1.</system:String>
     <system:String x:Key="item121">H1Z1.exe is currently being used.\n\nClose any open instances of H1Z1.</system:String>
@@ -138,7 +117,6 @@
     <system:String x:Key="item145">Server IP...</system:String>
     <system:String x:Key="item146">Cannot delete this entry.</system:String>
     <system:String x:Key="item147">Are you sure you want to delete this server?</system:String>
-    <system:String x:Key="item148">Downloading asset patch for 2015...</system:String>
     <system:String x:Key="item149">Unzipping asset files...</system:String>
     <system:String x:Key="item150">PATCHING</system:String>
     <system:String x:Key="item151">Server name or IP not valid.</system:String>
@@ -166,11 +144,12 @@
     <system:String x:Key="item173">Report a bug...</system:String>
     <system:String x:Key="item174">Here you can report any bugs that you have experienced in game while using the H1Emu Server files:</system:String>
     <system:String x:Key="item175">Here you can report any bugs that you have experienced while using the H1Emu Launcher:</system:String>
-    <system:String x:Key="item176">delete your singleplayer data...</system:String>
+    <system:String x:Key="item176">deleting your singleplayer data.</system:String>
     <system:String x:Key="item177">No singleplayer data found.</system:String>
     <system:String x:Key="item178">Deleting your singleplayer data may fix any issues you are facing, be warned that you will lose all progress.\n\nWould you like to continue?</system:String>
     <system:String x:Key="item179">Successfully deleted singleplayer data.</system:String>
-    <system:String x:Key="item180">The Account Key you are using is banned.</system:String>
-    <system:String x:Key="item181">The Account Key you are using is not valid on the H1Emu database.\n\nPlease verify you have typed the key correctly.</system:String>
-    <system:String x:Key="item182">There was an error validating your Account Key:</system:String>
+    <system:String x:Key="item180">The Account Key you are using is not valid on the H1Emu database.\n\nPlease verify you have typed the key correctly.</system:String>
+    <system:String x:Key="item181">The Account Key you are using is banned.</system:String>
+    <system:String x:Key="item182">Unknown response code while checking your Account Key validity:</system:String>
+    <system:String x:Key="item183">There was an error validating your Account Key:</system:String>
 </ResourceDictionary>
