--- a/H1EmuLauncher/Language/StringResources.es-ES.xaml
+++ b/H1EmuLauncher/Language/StringResources.es-ES.xaml
@@ -5,22 +5,16 @@
     <system:String x:Key="item1">Existe una nueva actualización disponible; ¿quieres actualizar ahora?</system:String>
     <system:String x:Key="item2">ACTUALIZAR</system:String>
     <system:String x:Key="item3">Versión</system:String>
-    <system:String x:Key="item4">Presiona en iniciar para iniciar el servidor local.</system:String>
-    <system:String x:Key="item5">Presiona en jugar para conectar a un servidor local.</system:String>
-    <system:String x:Key="item6">Presiona conectar para conectar al servidor de pruebas de H1Emu (solo 2015)</system:String>
-    <system:String x:Key="item7">INICIAR</system:String>
+    <system:String x:Key="item4">Espere por favor</system:String>
     <system:String x:Key="item8">JUGAR</system:String>
-    <system:String x:Key="item9">CONECTAR</system:String>
     <system:String x:Key="item10">ADVERTENCIA:</system:String>
     <system:String x:Key="item11">Debes poseer H1Z1: Just Survive en tu cuenta de Steam para poder descargar. Este proyecto no apoya la piratería.</system:String>
     <system:String x:Key="item12">Únete a la comunidad en:</system:String>
     <system:String x:Key="item13">Error al ejecutar el juego:</system:String>
     <system:String x:Key="item14">El juego no se encuentra en la carpeta especificada.</system:String>
-    <system:String x:Key="item15">No hay servidor de pruebas para esta versión del juego en este momento. (Diciembre 2016)</system:String>
-    <system:String x:Key="item16">La carpeta seleccionada no contiene los archivos del parche.\n\n¿Quieres continuar de todas formas? (No podrás unirte a servidores)</system:String>
+    <system:String x:Key="item15">Debe tener H1Z1: Just Survive en su cuenta de Steam para poder descargarlo.</system:String>
     <system:String x:Key="item17">No se pudo iniciar sesión en Steam:</system:String>
     <system:String x:Key="item18">AÑADIR</system:String>
-    <system:String x:Key="item19">• Estado •</system:String>
     <system:String x:Key="item21">Se obtuvo la clave de depot para {0} resultado: {1}</system:String>
     <system:String x:Key="item23">¡Descarga completada!</system:String>
     <system:String x:Key="item24">¿Necesitas descargar una versión diferente? ¡Presiona en el botón de abajo para iniciar se sesión de nuevo!</system:String>
@@ -28,8 +22,6 @@
     <system:String x:Key="item26">Descargando:</system:String>
     <system:String x:Key="item27">versión</system:String>
     <system:String x:Key="item28">CANCELAR</system:String>
-    <system:String x:Key="item29">¿Qué versión de éstas</system:String>
-    <system:String x:Key="item30">quieres instalar?</system:String>
     <system:String x:Key="item31">ENERO 2015</system:String>
     <system:String x:Key="item32">DICIEMBRE 2016</system:String>
     <system:String x:Key="item33">¿Estás seguro de que quieres cancelar la descarga de H1Z1: Just Survive versión</system:String>
@@ -48,9 +40,7 @@
     <system:String x:Key="item46">Haz click aquí para descargar la última compilación del servidor.</system:String>
     <system:String x:Key="item47">Haz click aquí para descargar la última compilación estable del servidor.</system:String>
     <system:String x:Key="item48">Buscando actualizaciones...</system:String>
-    <system:String x:Key="item49">Por favor, espera</system:String>
     <system:String x:Key="item50">Por favor, asegúrate de que tu e-mail está disponible para el código de verificación en dos pasos después de iniciar sesión en tu cuenta de Steam.</system:String>
-    <system:String x:Key="item51">Parece que no tienes el directorio de juego configurado.\n\nConfigúralo en el menú de Configuración.</system:String>
     <system:String x:Key="item52">Parece que no tienes los archivos de servidor instalados.\n\nInstálalos en el menú de Configuración.</system:String>
     <system:String x:Key="item53">Error al iniciar el servidor:</system:String>
     <system:String x:Key="item54">Descargando...</system:String>
@@ -63,7 +53,6 @@
     <system:String x:Key="item61">Ver detalles de la actualización...</system:String>
     <system:String x:Key="item62">Configuración...</system:String>
     <system:String x:Key="item63">¡Gracias a todos los que se unieron a la comunidad y mantuvieron la motivación en el proyecto!</system:String>
-    <system:String x:Key="item64">Unirse a la Comunidad</system:String>
     <system:String x:Key="item65">Sobre el proyecto...</system:String>
     <system:String x:Key="item66">No se pudo obtener la información de GitHub:</system:String>
     <system:String x:Key="item67">Ahora no</system:String>
@@ -79,26 +68,17 @@
     <system:String x:Key="item77">Código de autorización</system:String>
     <system:String x:Key="item78">Ingrese el código de autenticación de dos factores enviado a su aplicación Steam.</system:String>
     <system:String x:Key="item79">Ingrese el código de autenticación de dos factores enviado a su correo electrónico.</system:String>
-    <system:String x:Key="item80">Guardada la configuración antes de cargar</system:String>
-    <system:String x:Key="item81">Por favor, introduce tu código de autorización en dos pasos.</system:String>
-    <system:String x:Key="item83">Error al obtener la clave del CDN para el servidor {0} depot {1}</system:String>
     <system:String x:Key="item84">No se encontró ningún depot de descarga para la aplicación {0}</system:String>
     <system:String x:Key="item85">Depot {0} no listado para aplicación {1}</system:String>
-    <system:String x:Key="item86">Manifest {0} ({1})...</system:String>
-    <system:String x:Key="item87">Sí</system:String>
-    <system:String x:Key="item88">No</system:String>
     <system:String x:Key="item89">El directorio seleccionado no está vacío.\n\n¿Continuar de todas formas?</system:String>
     <system:String x:Key="item91">Procesando...</system:String>
     <system:String x:Key="item92">OK</system:String>
-    <system:String x:Key="item93">Tarea fallida</system:String>
     <system:String x:Key="item95">Ocurrió un error al instalar el parche 2015:</system:String>
     <system:String x:Key="item97">Ocurrió un error al instalar el parche 2016:</system:String>
-    <system:String x:Key="item98">Descargando parche para 2015...</system:String>
     <system:String x:Key="item99">Descomprimiendo archivos del parche...</system:String>
     <system:String x:Key="item100">Eliminando archivo .zip...</system:String>
     <system:String x:Key="item101">Hecho. (Tiempo transcurrido:</system:String>
     <system:String x:Key="item102">El parche para la versión 2015 del juego ha sido instalado.</system:String>
-    <system:String x:Key="item103">Descargando parche para 2016...</system:String>
     <system:String x:Key="item104">El parche para la versión 2016 del juego ha sido instalado.</system:String>
     <system:String x:Key="item105">Instalando última versión del servidor...</system:String>
     <system:String x:Key="item107">Ocurrió un error al instalar la última versión del servidor:</system:String>
@@ -108,9 +88,7 @@
     <system:String x:Key="item112">La versión estable del servidor ha sido instalada.</system:String>
     <system:String x:Key="item113">Buscando archivos antiguos...</system:String>
     <system:String x:Key="item114">Borrando archivos antiguos...</system:String>
-    <system:String x:Key="item115">Descargando archivos del servidor...</system:String>
     <system:String x:Key="item116">Descomprimiendo archivos del servidor...</system:String>
-    <system:String x:Key="item117">Descargando NodeJS portable...</system:String>
     <system:String x:Key="item118">Descomprimiendo archivos de Node...</system:String>
     <system:String x:Key="item120">Por favor cierra H1Z1.</system:String>
     <system:String x:Key="item121">H1Z1.exe está en ejecución.\n\nCierra cualquier instancia abierta de H1Z1.</system:String>
@@ -139,7 +117,6 @@
     <system:String x:Key="item145">IP del servidor...</system:String>
     <system:String x:Key="item146">No se puede eliminar este campo.</system:String>
     <system:String x:Key="item147">¿Seguro que quieres eliminar este servidor?</system:String>
-    <system:String x:Key="item148">Descargando paquete del parche para 2015...</system:String>
     <system:String x:Key="item149">Descomprimiendo archivos del paquete...</system:String>
     <system:String x:Key="item150">PARCHEANDO</system:String>
     <system:String x:Key="item151">El nombre o la IP del servidor son inválidos.</system:String>
@@ -167,11 +144,12 @@
     <system:String x:Key="item173">Reportar un error...</system:String>
     <system:String x:Key="item174">Aquí puede informar cualquier error que haya experimentado en el juego mientras usaba los archivos del servidor H1Emu:</system:String>
     <system:String x:Key="item175">Aquí puede informar cualquier error que haya experimentado al usar H1Emu Launcher:</system:String>
-    <system:String x:Key="item176">borrar tus datos de un solo jugador...</system:String>
+    <system:String x:Key="item176">borrando tus datos de un solo jugador.</system:String>
     <system:String x:Key="item177">No se encontraron datos de un solo jugador.</system:String>
     <system:String x:Key="item178">Eliminar los datos de un jugador puede solucionar cualquier problema al que se esté enfrentando; tenga en cuenta que perderá todo el progreso.\n\n¿Desea continuar?</system:String>
     <system:String x:Key="item179">Datos de un solo jugador eliminados con éxito.</system:String>
-    <system:String x:Key="item180">La clave de cuenta que está utilizando está prohibida.</system:String>
-    <system:String x:Key="item181">La clave de cuenta que está utilizando no es válida en la base de datos de H1Emu.\n\nVerifique que haya escrito la clave correctamente.</system:String>
-    <system:String x:Key="item182">Hubo un error al validar su clave de cuenta:</system:String>
+    <system:String x:Key="item180">La clave de cuenta que está utilizando no es válida en la base de datos de H1Emu.\n\nVerifique que haya escrito la clave correctamente.</system:String>
+    <system:String x:Key="item181">La clave de cuenta que está utilizando está prohibida.</system:String>
+    <system:String x:Key="item182">Código de respuesta desconocido al verificar la validez de su clave de cuenta:</system:String>
+    <system:String x:Key="item183">Hubo un error al validar su clave de cuenta:</system:String>
 </ResourceDictionary>
