--- a/H1EmuLauncher/Language/StringResources.hr.xaml
+++ b/H1EmuLauncher/Language/StringResources.hr.xaml
@@ -5,22 +5,16 @@
     <system:String x:Key="item1">Nova verzija je dostupna, želite li ažurirati?</system:String>
     <system:String x:Key="item2">AŽURIRANJE</system:String>
     <system:String x:Key="item3">Verzija</system:String>
-    <system:String x:Key="item4">Pritisnite pokreni da bi pokrenuli lokalni server.</system:String>
-    <system:String x:Key="item5">Kliknite na "Igraj" da bi se spojili na lokalni server.</system:String>
-    <system:String x:Key="item6">Pritisnite na "Spojite se" da bi se spojili na H1Emu server. (samo za verziju 2015)</system:String>
-    <system:String x:Key="item7">POKRENI</system:String>
+    <system:String x:Key="item4">Molimo pričekajte</system:String>
     <system:String x:Key="item8">Igraj</system:String>
-    <system:String x:Key="item9">Spoji se</system:String>
     <system:String x:Key="item10">UPOZORENJE:</system:String>
     <system:String x:Key="item11">Da bi ste igrali H1Z1: Just Survive morate imati kopiju igre na svojem Steam računu. Projekt ne podržava piratstvo.</system:String>
     <system:String x:Key="item12">Pridružite se zajednici klikom na</system:String>
     <system:String x:Key="item13">Pogreška pri pokretanju igrice:</system:String>
     <system:String x:Key="item14">Igra nije pronađena u navedenom direktoriju.</system:String>
-    <system:String x:Key="item15">Trenutno ne postoji test server za odabranu verziju igre. (Prosinac 2016)</system:String>
-    <system:String x:Key="item16">Odabran direktorij ne sadržava patch datoteke.\n\nDa li ste sigurni da želite nastaviti? (Nećete biti u mogućnosti ulaska na servere)</system:String>
+    <system:String x:Key="item15">Morate posjedovati H1Z1: Just Survive na svom Steam računu kako biste preuzeli.</system:String>
     <system:String x:Key="item17">Pogreška pri povezivanju sa Steam računom:</system:String>
     <system:String x:Key="item18">DODATI</system:String>
-    <system:String x:Key="item19">• Status •</system:String>
     <system:String x:Key="item21">Dobiven depo kljuć za {0} rezultat: {1}</system:String>
     <system:String x:Key="item23">Preuzimanje dovršeno!</system:String>
     <system:String x:Key="item24">Potrebna vam je druga verzija? Pritisnite na gumb ispod da bi ste se ponovno prijavili!</system:String>
@@ -28,8 +22,6 @@
     <system:String x:Key="item26">Trenutno preuzimanje:</system:String>
     <system:String x:Key="item27">Verzija</system:String>
     <system:String x:Key="item28">ODUSTANI</system:String>
-    <system:String x:Key="item29">Koju verziju bi ste</system:String>
-    <system:String x:Key="item30">htjeli instalirati?</system:String>
     <system:String x:Key="item31">SIJEČANJ 2015</system:String>
     <system:String x:Key="item32">PROSINAC 2016</system:String>
     <system:String x:Key="item33">Da li ste sigurni da želite odustati od preuzimanja H1Z1: Just Survive version</system:String>
@@ -48,9 +40,7 @@
     <system:String x:Key="item46">Kliknite ovdje za preuzimanje najnovije verzije servera.</system:String>
     <system:String x:Key="item47">Kliknite ovdje za preuzimanje najnovije stabilne verzije servera.</system:String>
     <system:String x:Key="item48">Traženje nove verzije...</system:String>
-    <system:String x:Key="item49">Molim vas pričekajte</system:String>
     <system:String x:Key="item50">Nakon prijave Steam računom, provjerite da vaš e-mail ima mogućnost primanja 2-Auth koda.</system:String>
-    <system:String x:Key="item51">Nemate zadani direktorij.\n\nMolim vas zadajte željeni direktorij u Postavkama.</system:String>
     <system:String x:Key="item52">Nemate instalirane datoteke servera.\n\nInstalirajte ih odlaskom u Postavke.</system:String>
     <system:String x:Key="item53">Pogreška pri pokretanju servera:</system:String>
     <system:String x:Key="item54">Preuzimanje...</system:String>
@@ -63,7 +53,6 @@
     <system:String x:Key="item61">Prikaži detalje nove verzije...</system:String>
     <system:String x:Key="item62">Postavke...</system:String>
     <system:String x:Key="item63">I posebna zahvala svima koji su se pridružili našoj zajednici i što su nas motivirali da nastavimo!</system:String>
-    <system:String x:Key="item64">Pridružite se zajednici</system:String>
     <system:String x:Key="item65">O projektu...</system:String>
     <system:String x:Key="item66">Nemoguće dohvatiti informacije s GitHuba:</system:String>
     <system:String x:Key="item67">Ne sada</system:String>
@@ -79,26 +68,17 @@
     <system:String x:Key="item77">Autentikacijski Kod</system:String>
     <system:String x:Key="item78">Unesite dvofaktorni kod za provjeru autentičnosti koji je poslan vašoj aplikaciji Steam.</system:String>
     <system:String x:Key="item79">Unesite dvofaktorni kod za autentifikaciju poslan na Vašu e-poštu.</system:String>
-    <system:String x:Key="item80">Spremljena konfiguracija prije učitavnja.</system:String>
-    <system:String x:Key="item81">Molim vas unesite vaš 2FA kod.</system:String>
-    <system:String x:Key="item83">Pogreška pri dohvatu CDN tokena za server {0} depo {1}</system:String>
     <system:String x:Key="item84">Nije pronađen nijedan depo za preuzimanje aplikacije {0}</system:String>
     <system:String x:Key="item85">Depo {0} nije na popisu za aplikaciju {1}</system:String>
-    <system:String x:Key="item86">Manifest {0} ({1})...</system:String>
-    <system:String x:Key="item87">Da</system:String>
-    <system:String x:Key="item88">Ne</system:String>
     <system:String x:Key="item89">Odabran direktorij nije prazan.\n\nDa li ste sigurni da želite nastaviti?</system:String>
     <system:String x:Key="item91">Procesiranje...</system:String>
     <system:String x:Key="item92">OK</system:String>
-    <system:String x:Key="item93">Zadatak nije uspio.</system:String>
     <system:String x:Key="item95">Došlo je do pogreške pri instalaciji 2015 patcha:</system:String>
     <system:String x:Key="item97">Došlo je do pogreške pri instalaciji 2016 patcha:</system:String>
-    <system:String x:Key="item98">Preuzimanje patch datoteke za verziju 2015...</system:String>
     <system:String x:Key="item99">Raspakiravanje patch datoteka...</system:String>
     <system:String x:Key="item100">Brisanje .zip datoteke...</system:String>
     <system:String x:Key="item101">Zadatak izvršen. (Proteklo vrijeme:</system:String>
     <system:String x:Key="item102">Patch datoke za verziju 2015 su završili sa instalacijom.</system:String>
-    <system:String x:Key="item103">Preuzimanje patch datoteke za verziju 2016...</system:String>
     <system:String x:Key="item104">Patch datoke za verziju 2016 su završili sa instalacijom.</system:String>
     <system:String x:Key="item105">Instalacija najnovije verzije servera u tijeku...</system:String>
     <system:String x:Key="item107">Došlo je do pogreške pri instalaciji najnovije verzije servera:</system:String>
@@ -108,9 +88,7 @@
     <system:String x:Key="item112">Uspješno instalirana stabilna verzija servera</system:String>
     <system:String x:Key="item113">Traženje starih datoteka...</system:String>
     <system:String x:Key="item114">Brisanje starih datoteka...</system:String>
-    <system:String x:Key="item115">Preuzimanje datoteka servera...</system:String>
     <system:String x:Key="item116">Raspakiravanje datoteka servera...</system:String>
-    <system:String x:Key="item117">Preuzimanje NodeJS standalone...</system:String>
     <system:String x:Key="item118">Raspakiravanje node datotka...</system:String>
     <system:String x:Key="item120">Molim vas zatvorite H1Z1.</system:String>
     <system:String x:Key="item121">H1Z1.exe je trenutno u korištenju.\n\nZatvorite bilo koju inačicu H1Z1.</system:String>
@@ -139,7 +117,6 @@
     <system:String x:Key="item145">IP servera...</system:String>
     <system:String x:Key="item146">Nije moguće izbrisati unos.</system:String>
     <system:String x:Key="item147">Da li ste sigurni da želite izbrisati odabrani server?</system:String>
-    <system:String x:Key="item148">Preuzimanje asset patcha za verziju 2015...</system:String>
     <system:String x:Key="item149">Raspakiravanje asset datoteka...</system:String>
     <system:String x:Key="item150">PATCHANJE</system:String>
     <system:String x:Key="item151">Naziv ili IP adresa poslužitelja nisu valjani.</system:String>
@@ -167,11 +144,12 @@
     <system:String x:Key="item173">Prijavite grešku...</system:String>
     <system:String x:Key="item174">Ovdje možete prijaviti sve greške koje ste iskusili u igri dok koristite datoteke poslužitelja H1Emu:</system:String>
     <system:String x:Key="item175">Ovdje možete prijaviti sve greške koje ste iskusili dok ste koristili H1Emu Launcher:</system:String>
-    <system:String x:Key="item176">izbrišite svoje singleplayer podatke...</system:String>
+    <system:String x:Key="item176">brisanje vaših podataka za jednog igrača.</system:String>
     <system:String x:Key="item177">Nisu pronađeni singleplayer podaci.</system:String>
     <system:String x:Key="item178">Brisanje singleplayer podataka moglo bi popraviti problem koji imate, budite upozoreni da će te izgubiti sav progres.\n\nŽelite li nastaviti?</system:String>
     <system:String x:Key="item179">Uspješno izbrisani singleplayer podaci.</system:String>
-    <system:String x:Key="item180">Ključ računa koji koristite je zabranjen.</system:String>
-    <system:String x:Key="item181">Ključ računa koji koristite ne vrijedi na H1Emu bazi podataka.\n\nMolim provjerite da ste upisali ključ ispravno.</system:String>
-    <system:String x:Key="item182">Došlo je do pogreške pri validaciji vašeg ključa računa:</system:String>
+    <system:String x:Key="item180">Ključ računa koji koristite ne vrijedi na H1Emu bazi podataka.\n\nMolim provjerite da ste upisali ključ ispravno.</system:String>
+    <system:String x:Key="item181">Ključ računa koji koristite je zabranjen.</system:String>
+    <system:String x:Key="item182">Nepoznati kod odgovora tijekom provjere valjanosti vašeg ključa računa:</system:String>
+    <system:String x:Key="item183">Došlo je do pogreške pri validaciji vašeg ključa računa:</system:String>
 </ResourceDictionary>
