--- a/H1EmuLauncher/Language/StringResources.tr-TR.xaml
+++ b/H1EmuLauncher/Language/StringResources.tr-TR.xaml
@@ -5,22 +5,16 @@
     <system:String x:Key="item1">Yeni bir güncelleme var, yüklemek ister misiniz?</system:String>
     <system:String x:Key="item2">GÜNCELLEME</system:String>
     <system:String x:Key="item3">Versiyonu</system:String>
-    <system:String x:Key="item4">Yerel tekli sunucu için buradan başlatın.</system:String>
-    <system:String x:Key="item5">Yerel bir sunucuya bağlanmak için OYNA tuşuna basın.</system:String>
-    <system:String x:Key="item6">H1Emu test sunucusuna bağlanmak için BAĞLAN tuşuna basın.(2015 için)</system:String>
-    <system:String x:Key="item7">BAŞLAT</system:String>
+    <system:String x:Key="item4">Lütfen bekle</system:String>
     <system:String x:Key="item8">OYNA</system:String>
-    <system:String x:Key="item9">BAĞLAN</system:String>
     <system:String x:Key="item10">UYARI:</system:String>
     <system:String x:Key="item11">İndirmek için Steam hesabınızda H1Z1: Just Survive oyununa sahip olmanız gereklidir. Bu proje korsan oyunları desteklemez.</system:String>
     <system:String x:Key="item12">Topluluğa bağlanın: </system:String>
     <system:String x:Key="item13">Oyun başlatma hatası:</system:String>
     <system:String x:Key="item14">Oyun belirtilen klasörde bulunamadı.</system:String>
-    <system:String x:Key="item15">Oyunun bu sürümü için henüz bir test sunucusu yok. (Aralık 2016)</system:String>
-    <system:String x:Key="item16">Seçilen klasör yama dosyalarına sahip değil.\n\nYine de devam etmek stiyor musunuz? (Sunuculara bağlanmanız mümkün olmayacak.)</system:String>
+    <system:String x:Key="item15">İndirebilmek için Steam hesabınızda H1Z1: Just Survive'a sahip olmalısınız.</system:String>
     <system:String x:Key="item17">Steam'e bağlanılamıyor:</system:String>
     <system:String x:Key="item18">EKLE</system:String>
-    <system:String x:Key="item19">• Durum •</system:String>
     <system:String x:Key="item21">{0} için depo anahtarı mevcut: {1}</system:String>
     <system:String x:Key="item23">İndirme tamamlandı!</system:String>
     <system:String x:Key="item24">Başka bir versiyon yüklemek ister misiniz? Tekrar girmöek için tuşa alttaki basın!</system:String>
@@ -28,8 +22,6 @@
     <system:String x:Key="item26">İndiriliyor:</system:String>
     <system:String x:Key="item27">Versiyon</system:String>
     <system:String x:Key="item28">İPTAL</system:String>
-    <system:String x:Key="item29">Hangi versiyonu</system:String>
-    <system:String x:Key="item30">hangisini yüklemek istersiniz?</system:String>
     <system:String x:Key="item31">OCAK 2015</system:String>
     <system:String x:Key="item32">ARALIK 2016</system:String>
     <system:String x:Key="item33">H1Z1: Just Survive'ın bu versiyonunu indirmeyi iptal etmek ister misiniz?</system:String>
@@ -48,9 +40,7 @@
     <system:String x:Key="item46">Sunucuların son halini indirmek için buraya tıklayın.</system:String>
     <system:String x:Key="item47">Sunucuların son kararlı halini indirmek için buraya tıklayın.</system:String>
     <system:String x:Key="item48">Güncellemeler kontrol ediliyor...</system:String>
-    <system:String x:Key="item49">Lütfen bekleyin</system:String>
     <system:String x:Key="item50">Lütfen Steam hesabınıza girdikten sonra ikili-güvenlik adımı için e-postanızın açık olduğundan emin olun.</system:String>
-    <system:String x:Key="item51">Aktif bir klasör seçmediniz.\n\nKlasörü Ayarlar menüsünden seçiniz.</system:String>
     <system:String x:Key="item52">Sunucu dosyalarını yüklemediniz.\n\nBu işlemi Ayarlar menüsünden yapınız.</system:String>
     <system:String x:Key="item53">Sunucu başlatma hatası:</system:String>
     <system:String x:Key="item54">İndiriliyor...</system:String>
@@ -63,7 +53,6 @@
     <system:String x:Key="item61">Güncellemenin tüm detaylarını göster...</system:String>
     <system:String x:Key="item62">Ayarlar...</system:String>
     <system:String x:Key="item63">ve Topluluk'a katılan ve motivasyonu yüksek tutan herkese özel bir teşekkür!</system:String>
-    <system:String x:Key="item64">Topluluk'a Katıl</system:String>
     <system:String x:Key="item65">Proje hakkında...</system:String>
     <system:String x:Key="item66">GitHub Bilgisi alınamadı:</system:String>
     <system:String x:Key="item67">Şimdi değil</system:String>
@@ -79,26 +68,17 @@
     <system:String x:Key="item77">Erişim Kodu</system:String>
     <system:String x:Key="item78">Lütfen Steam uygulamanıza gönderilen iki faktörlü kimlik doğrulama kodunu girin.</system:String>
     <system:String x:Key="item79">Lütfen e-postanıza gönderilen iki faktörlü doğrulama kodunu giriniz.</system:String>
-    <system:String x:Key="item80">Yükleme öncesi ayarlar kaydedildi.</system:String>
-    <system:String x:Key="item81">Lütfen ikili-güvenlik adımı kodunu girin.</system:String>
-    <system:String x:Key="item83">{0} sunucusu  {1} deposu için CDN kodu alınamadı.</system:String>
     <system:String x:Key="item84">{0} uygulaması için depo dosyası bulunamadı.</system:String>
     <system:String x:Key="item85">{0} deposu {1} uygulaması için listelenmedi.</system:String>
-    <system:String x:Key="item86">Dosya çıkarımı: {0} ({1})...</system:String>
-    <system:String x:Key="item87">Evet</system:String>
-    <system:String x:Key="item88">Hayır</system:String>
     <system:String x:Key="item89">Seçilen klasör boş değil.\n\nYine de devam etmek istiyor musunuz?</system:String>
     <system:String x:Key="item91">İşleniyor...</system:String>
     <system:String x:Key="item92">Tamam</system:String>
-    <system:String x:Key="item93">Görev tamamlanamadı</system:String>
     <system:String x:Key="item95">2015 yaması yüklenirken hata oluştu:</system:String>
     <system:String x:Key="item97">2016 yaması yüklenirken hata oluştu:</system:String>
-    <system:String x:Key="item98">2015 için yama dosyası indiriliyor...</system:String>
     <system:String x:Key="item99">Yama dosyası açılıyor...</system:String>
     <system:String x:Key="item100">.zip dosyası siliniyor...</system:String>
     <system:String x:Key="item101">Tamamlandı. (Süre:</system:String>
     <system:String x:Key="item102">Oyun versiyonu 2015 için yama dosyası yüklendi.</system:String>
-    <system:String x:Key="item103">2016 için yama dosyası indiriliyor...</system:String>
     <system:String x:Key="item104">Oyun versiyonu 2016 için yama dosyası yüklendi.</system:String>
     <system:String x:Key="item105">Son sunucular yükleniyor...</system:String>
     <system:String x:Key="item107">Son sunucular yüklenirken hata oluştu:</system:String>
@@ -108,9 +88,7 @@
     <system:String x:Key="item112">Kararlı sunucu yüklendi.</system:String>
     <system:String x:Key="item113">Eski dosyalar kontrol ediliyor...</system:String>
     <system:String x:Key="item114">Eski dosyalar siliniyor...</system:String>
-    <system:String x:Key="item115">Sunucu dosyaları indiriliyor...</system:String>
     <system:String x:Key="item116">Sunucu dosyaları açılıyor...</system:String>
-    <system:String x:Key="item117">NodeJS indiriliyor...</system:String>
     <system:String x:Key="item118">Node dosyaları açılıyor...</system:String>
     <system:String x:Key="item120">Lütfen H1Z1'i kapatın.</system:String>
     <system:String x:Key="item121">H1Z1.exe şu anda kullanımda.\n\nAçık olan H1Z1 uygulamalarını kapatın..</system:String>
@@ -139,7 +117,6 @@
     <system:String x:Key="item145">Sunucu IP...</system:String>
     <system:String x:Key="item146">Bu girdi silinemiyor.</system:String>
     <system:String x:Key="item147">Bu sunucuyu silmek istediğinize emin misiniz?</system:String>
-    <system:String x:Key="item148">2015 için yama paketi indiriliyor...</system:String>
     <system:String x:Key="item149">Paket dosyası açılıyor...</system:String>
     <system:String x:Key="item150">YAMA UYGULANIYOR</system:String>
     <system:String x:Key="item151">Sunucu adı veya IP geçerli değil.</system:String>
@@ -167,11 +144,12 @@
     <system:String x:Key="item173">Hata bildir...</system:String>
     <system:String x:Key="item174">H1Emu Sunucu dosyalarını kullanırken oyunda karşılaştığınız hataları buradan bildirebilirsiniz:</system:String>
     <system:String x:Key="item175">H1Emu Başlatıcı'yı kullanırken karşılaştığınız hataları buradan bildirebilirsiniz:</system:String>
-    <system:String x:Key="item176">tek oyunculu verilerinizi silin...</system:String>
+    <system:String x:Key="item176">tek oyunculu verilerinizi silme.</system:String>
     <system:String x:Key="item177">Tek oyunculu veri bulunamadı.</system:String>
     <system:String x:Key="item178">Tek oyunculu verilerinizi silmek, karşılaştığınız sorunları çözebilir, tüm ilerlemenizi kaybedeceğiniz konusunda uyarınız.\n\nDevam etmek istiyor musunuz?</system:String>
     <system:String x:Key="item179">Tek oyunculu veriler başarıyla silindi.</system:String>
-    <system:String x:Key="item180">Kullanmakta olduğunuz Hesap Anahtarı yasaklanmıştır.</system:String>
-    <system:String x:Key="item181">Kullanmakta olduğunuz Hesap Anahtarı, H1Emu veritabanında geçerli değil.\n\nLütfen anahtarı doğru yazdığınızdan emin olun.</system:String>
-    <system:String x:Key="item182">Hesap Anahtarınız doğrulanırken bir hata oluştu:</system:String>
+    <system:String x:Key="item180">Kullanmakta olduğunuz Hesap Anahtarı, H1Emu veritabanında geçerli değil.\n\nLütfen anahtarı doğru yazdığınızdan emin olun.</system:String>
+    <system:String x:Key="item181">Kullanmakta olduğunuz Hesap Anahtarı yasaklanmıştır.</system:String>
+    <system:String x:Key="item182">Hesap Anahtarınızın geçerliliğini kontrol ederken bilinmeyen yanıt kodu:</system:String>
+    <system:String x:Key="item183">Hesap Anahtarınız doğrulanırken bir hata oluştu:</system:String>
 </ResourceDictionary>
