--- a/H1EmuLauncher/Language/StringResources.zh-cn.xaml
+++ b/H1EmuLauncher/Language/StringResources.zh-cn.xaml
@@ -5,22 +5,16 @@
     <system:String x:Key="item1">有新的更新可用，是否立即更新?</system:String>
     <system:String x:Key="item2">更新</system:String>
     <system:String x:Key="item3">最新版本</system:String>
-    <system:String x:Key="item4">按 本地服务器 按键启动本地服务器</system:String>
-    <system:String x:Key="item5">按 运行游戏 按键后连接本地服务器</system:String>
-    <system:String x:Key="item6">按 连接在线服 按键可以连接H1emu在线测试服务器 (仅支持2015版本)</system:String>
-    <system:String x:Key="item7">本地服务器</system:String>
+    <system:String x:Key="item4">请稍等</system:String>
     <system:String x:Key="item8">运行游戏</system:String>
-    <system:String x:Key="item9">连接在线服</system:String>
     <system:String x:Key="item10">注意</system:String>
     <system:String x:Key="item11">你的steam账户中必须要有H1Z1：Just Survive这个游戏才能下载游戏本体，本项目不支持盗版。</system:String>
     <system:String x:Key="item12">加入社区在</system:String>
     <system:String x:Key="item13">启动游戏错误：</system:String>
     <system:String x:Key="item14">未在指定的目录中找到游戏。</system:String>
-    <system:String x:Key="item15">目前没有2016年12月版本的在线测试服务器。</system:String>
-    <system:String x:Key="item16">你选择的目录未包含补丁文件。\n\n你是否要继续？ (没有补丁文件可能无法顺利进入游戏)</system:String>
+    <system:String x:Key="item15">您必须在 Steam 帐户上拥有 H1Z1：Just Survive 才能下载。</system:String>
     <system:String x:Key="item17">无法登录到Steam:</system:String>
     <system:String x:Key="item18">添加</system:String>
-    <system:String x:Key="item19">• 进度状态 •</system:String>
     <system:String x:Key="item21">获取数据包密钥 {0} 结果： {1}</system:String>
     <system:String x:Key="item23">下载完成！</system:String>
     <system:String x:Key="item24">需要下载其他版本吗？按下面的登录按钮返回Steam登录界面！</system:String>
@@ -28,8 +22,6 @@
     <system:String x:Key="item26">当前正在下载：</system:String>
     <system:String x:Key="item27">版本</system:String>
     <system:String x:Key="item28">取消</system:String>
-    <system:String x:Key="item29">选择下载</system:String>
-    <system:String x:Key="item30">的哪个版本？</system:String>
     <system:String x:Key="item31">2015年1月份版本</system:String>
     <system:String x:Key="item32">2016年12月份版本</system:String>
     <system:String x:Key="item33">您确定要取消 H1Z1: Just Survive 版本的下载吗</system:String>
@@ -48,9 +40,7 @@
     <system:String x:Key="item46">点击 最新版 是下载并安装最新版本的本地服务器。</system:String>
     <system:String x:Key="item47">点击 稳定版 是下载并安装稳定版本地服务器。</system:String>
     <system:String x:Key="item48">正在检查更新...</system:String>
-    <system:String x:Key="item49">请稍候</system:String>
     <system:String x:Key="item50">登录Steam账号后请正确输入你的Steam令牌。</system:String>
-    <system:String x:Key="item51">你没有设置游戏目录。\n\n请到左下角游戏配置菜单中选择游戏目录。</system:String>
     <system:String x:Key="item52">你没有安装单机服务器。\n\n请到左下角游戏配置菜单中安装单机服务器。</system:String>
     <system:String x:Key="item53">单机服务器启动错误：</system:String>
     <system:String x:Key="item54">正在下载...</system:String>
@@ -63,7 +53,6 @@
     <system:String x:Key="item61">查看最新版本的详细信息...</system:String>
     <system:String x:Key="item62">游戏配置...</system:String>
     <system:String x:Key="item63">感谢每一位富有激情且长期活跃在社区的人！</system:String>
-    <system:String x:Key="item64">加入社区</system:String>
     <system:String x:Key="item65">关于此项目...</system:String>
     <system:String x:Key="item66">未能获取GitHub信息：</system:String>
     <system:String x:Key="item67">暂不更新</system:String>
@@ -79,26 +68,17 @@
     <system:String x:Key="item77">令牌</system:String>
     <system:String x:Key="item78">请输入发送到您的 Steam 应用的两因素验证码。</system:String>
     <system:String x:Key="item79">请输入发送到您的电子邮件的两因素验证码。</system:String>
-    <system:String x:Key="item80">加载已保存的配置</system:String>
-    <system:String x:Key="item81">请输入你当前的steam令牌。</system:String>
-    <system:String x:Key="item83">获取服务器 {0} 安装包 {1} 的CDN令牌失败</system:String>
     <system:String x:Key="item84">未找到任何可以下载此游戏的 {0} 的数据包</system:String>
     <system:String x:Key="item85">数据包 {0} 不在游戏 {1} 列表中</system:String>
-    <system:String x:Key="item86">打包编号 {0} ({1})...</system:String>
-    <system:String x:Key="item87">是</system:String>
-    <system:String x:Key="item88">否</system:String>
     <system:String x:Key="item89">你选择的不是空目录。\n\n确认要请继续下载吗？</system:String>
     <system:String x:Key="item91">正在处理中...</system:String>
     <system:String x:Key="item92">确定</system:String>
-    <system:String x:Key="item93">任务失败</system:String>
     <system:String x:Key="item95">安装2015版本的补丁文件出错：</system:String>
     <system:String x:Key="item97">安装2016版本的补丁文件出错：</system:String>
-    <system:String x:Key="item98">正在下载2015版本的补丁文件...</system:String>
     <system:String x:Key="item99">正在解压文件...</system:String>
     <system:String x:Key="item100">正在删除压缩文件...</system:String>
     <system:String x:Key="item101">完成。 (运行时间：</system:String>
     <system:String x:Key="item102">游戏2015版本的补丁文件已经安装完成。</system:String>
-    <system:String x:Key="item103">正在下载2016版本的补丁文件...</system:String>
     <system:String x:Key="item104">游戏2016版本的补丁文件已经安装完成。</system:String>
     <system:String x:Key="item105">正在安装最新版单机服务器...</system:String>
     <system:String x:Key="item107">安装最新版的单机服务器出错：</system:String>
@@ -108,9 +88,7 @@
     <system:String x:Key="item112">已经完成稳定版单机服务器的安装。</system:String>
     <system:String x:Key="item113">正在验证旧文件...</system:String>
     <system:String x:Key="item114">正在删除旧文件...</system:String>
-    <system:String x:Key="item115">正在下载服务器文件...</system:String>
     <system:String x:Key="item116">正在解压服务器文件...</system:String>
-    <system:String x:Key="item117">正在下载服务器运行环境...</system:String>
     <system:String x:Key="item118">正在解压服务器运行环境...</system:String>
     <system:String x:Key="item120">请关闭已经启动的H1Z1游戏。</system:String>
     <system:String x:Key="item121">H1Z1游戏已经启动。\n\n请关闭所有已经启动的H1Z1游戏。</system:String>
@@ -139,7 +117,6 @@
     <system:String x:Key="item145">服务器IP地址...</system:String>
     <system:String x:Key="item146">无法删除此服务器。</system:String>
     <system:String x:Key="item147">确认要删除这个服务器吗？</system:String>
-    <system:String x:Key="item148">正在下载2015版资源补丁...</system:String>
     <system:String x:Key="item149">正在解压资源文件...</system:String>
     <system:String x:Key="item150">正在安装补丁</system:String>
     <system:String x:Key="item151">无效的服务器名字或者IP地址。</system:String>
@@ -167,11 +144,12 @@
     <system:String x:Key="item173">报告错误...</system:String>
     <system:String x:Key="item174">在这里您可以报告您在使用 H1Emu 服务器文件时在游戏中遇到的任何错误：</system:String>
     <system:String x:Key="item175">在这里您可以报告您在使用 H1Emu Launcher 时遇到的任何错误：</system:String>
-    <system:String x:Key="item176">删除你的单人游戏数据...</system:String>
+    <system:String x:Key="item176">删除您的单人游戏数据。</system:String>
     <system:String x:Key="item177">未找到单人游戏数据。</system:String>
     <system:String x:Key="item178">删除你的单人游戏数据可能会解决你面临的任何问题，请注意你将失去所有进度。\n\n你想继续吗？</system:String>
     <system:String x:Key="item179">成功删除单人游戏数据。</system:String>
-    <system:String x:Key="item180">您正在使用的帐户密钥已被禁止。</system:String>
-    <system:String x:Key="item181">您使用的帐户密钥在 H1Emu 数据库上无效。\n\n请验证您是否正确键入了密钥。</system:String>
-    <system:String x:Key="item182">验证您的帐户密钥时出错：</system:String>
+    <system:String x:Key="item180">您使用的帐户密钥在 H1Emu 数据库上无效。\n\n请验证您是否正确键入了密钥。</system:String>
+    <system:String x:Key="item181">您正在使用的帐户密钥已被禁止。</system:String>
+    <system:String x:Key="item182">检查您的帐户密钥有效性时出现未知响应代码：</system:String>
+    <system:String x:Key="item183">验证您的帐户密钥时出错：</system:String>
 </ResourceDictionary>
